--- a/_modules/thetis/coordsys.html
+++ b/_modules/thetis/coordsys.html
@@ -1,17 +1,15 @@
-
 <!DOCTYPE html>
 
-<html>
+<html lang="en" data-content_root="../../">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.coordsys &#8212; Thetis 0+untagged.2009.gd7af522 documentation</title>
-    <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
-    <link rel="stylesheet" type="text/css" href="../../_static/thetis.css" />
-    <script data-url_root="../../" id="documentation_options" src="../../_static/documentation_options.js"></script>
-    <script src="../../_static/jquery.js"></script>
-    <script src="../../_static/underscore.js"></script>
-    <script src="../../_static/doctools.js"></script>
+    <title>thetis.coordsys &#8212; Thetis 0+untagged.2009.gb75eefa documentation</title>
+    <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=fa44fd50" />
+    <link rel="stylesheet" type="text/css" href="../../_static/thetis.css?v=0f3339d6" />
+    <script src="../../_static/documentation_options.js?v=47a7fef3"></script>
+    <script src="../../_static/doctools.js?v=888ff710"></script>
+    <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
 <!--[if lte IE 6]>
@@ -63,18 +61,25 @@
 <span class="n">LL_WGS84</span> <span class="o">=</span> <span class="n">pyproj</span><span class="o">.</span><span class="n">Proj</span><span class="p">(</span><span class="n">proj</span><span class="o">=</span><span class="s1">&#39;latlong&#39;</span><span class="p">,</span> <span class="n">datum</span><span class="o">=</span><span class="s1">&#39;WGS84&#39;</span><span class="p">,</span> <span class="n">errcheck</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
 
 
-<div class="viewcode-block" id="CoordinateSystem"><a class="viewcode-back" href="../../thetis.html#thetis.coordsys.CoordinateSystem">[docs]</a><span class="k">class</span> <span class="nc">CoordinateSystem</span><span class="p">(</span><span class="n">ABC</span><span class="p">):</span>
+<div class="viewcode-block" id="CoordinateSystem">
+<a class="viewcode-back" href="../../thetis.html#thetis.coordsys.CoordinateSystem">[docs]</a>
+<span class="k">class</span> <span class="nc">CoordinateSystem</span><span class="p">(</span><span class="n">ABC</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Base class for horizontal coordinate systems</span>
 
 <span class="sd">    Provides methods for coordinate transformations etc.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-<div class="viewcode-block" id="CoordinateSystem.to_lonlat"><a class="viewcode-back" href="../../thetis.html#thetis.coordsys.CoordinateSystem.to_lonlat">[docs]</a>    <span class="nd">@abstractmethod</span>
+<div class="viewcode-block" id="CoordinateSystem.to_lonlat">
+<a class="viewcode-back" href="../../thetis.html#thetis.coordsys.CoordinateSystem.to_lonlat">[docs]</a>
+    <span class="nd">@abstractmethod</span>
     <span class="k">def</span> <span class="nf">to_lonlat</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">x</span><span class="p">,</span> <span class="n">y</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Convert coordinates to latitude and longitude&quot;&quot;&quot;</span>
         <span class="k">pass</span></div>
 
-<div class="viewcode-block" id="CoordinateSystem.get_vector_rotator"><a class="viewcode-back" href="../../thetis.html#thetis.coordsys.CoordinateSystem.get_vector_rotator">[docs]</a>    <span class="nd">@abstractmethod</span>
+
+<div class="viewcode-block" id="CoordinateSystem.get_vector_rotator">
+<a class="viewcode-back" href="../../thetis.html#thetis.coordsys.CoordinateSystem.get_vector_rotator">[docs]</a>
+    <span class="nd">@abstractmethod</span>
     <span class="k">def</span> <span class="nf">get_vector_rotator</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">x</span><span class="p">,</span> <span class="n">y</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Returns a vector rotator object.</span>
@@ -82,10 +87,14 @@
 <span class="sd">        The rotator converst vector-valued data to/from longitude, latitude</span>
 <span class="sd">        coordinates.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="k">pass</span></div></div>
+        <span class="k">pass</span></div>
+</div>
 
 
-<div class="viewcode-block" id="proj_transform"><a class="viewcode-back" href="../../thetis.html#thetis.coordsys.proj_transform">[docs]</a><span class="k">def</span> <span class="nf">proj_transform</span><span class="p">(</span><span class="n">x</span><span class="p">,</span> <span class="n">y</span><span class="p">,</span> <span class="n">trans</span><span class="p">):</span>
+
+<div class="viewcode-block" id="proj_transform">
+<a class="viewcode-back" href="../../thetis.html#thetis.coordsys.proj_transform">[docs]</a>
+<span class="k">def</span> <span class="nf">proj_transform</span><span class="p">(</span><span class="n">x</span><span class="p">,</span> <span class="n">y</span><span class="p">,</span> <span class="n">trans</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Transform coordinates from source to target system.</span>
 
@@ -108,7 +117,10 @@
     <span class="k">return</span> <span class="n">a</span><span class="p">,</span> <span class="n">b</span></div>
 
 
-<div class="viewcode-block" id="UTMCoordinateSystem"><a class="viewcode-back" href="../../thetis.html#thetis.coordsys.UTMCoordinateSystem">[docs]</a><span class="k">class</span> <span class="nc">UTMCoordinateSystem</span><span class="p">(</span><span class="n">CoordinateSystem</span><span class="p">):</span>
+
+<div class="viewcode-block" id="UTMCoordinateSystem">
+<a class="viewcode-back" href="../../thetis.html#thetis.coordsys.UTMCoordinateSystem">[docs]</a>
+<span class="k">class</span> <span class="nc">UTMCoordinateSystem</span><span class="p">(</span><span class="n">CoordinateSystem</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Represents Universal Transverse Mercator coordinate systems</span>
 <span class="sd">    &quot;&quot;&quot;</span>
@@ -120,7 +132,9 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">transformer_xy</span> <span class="o">=</span> <span class="n">pyproj</span><span class="o">.</span><span class="n">Transformer</span><span class="o">.</span><span class="n">from_crs</span><span class="p">(</span>
             <span class="n">LL_WGS84</span><span class="o">.</span><span class="n">srs</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">proj_obj</span><span class="o">.</span><span class="n">srs</span><span class="p">)</span>
 
-<div class="viewcode-block" id="UTMCoordinateSystem.to_lonlat"><a class="viewcode-back" href="../../thetis.html#thetis.coordsys.UTMCoordinateSystem.to_lonlat">[docs]</a>    <span class="k">def</span> <span class="nf">to_lonlat</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">x</span><span class="p">,</span> <span class="n">y</span><span class="p">,</span> <span class="n">positive_lon</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
+<div class="viewcode-block" id="UTMCoordinateSystem.to_lonlat">
+<a class="viewcode-back" href="../../thetis.html#thetis.coordsys.UTMCoordinateSystem.to_lonlat">[docs]</a>
+    <span class="k">def</span> <span class="nf">to_lonlat</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">x</span><span class="p">,</span> <span class="n">y</span><span class="p">,</span> <span class="n">positive_lon</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Convert (x, y) coordinates to (latitude, longitude)</span>
 
@@ -136,7 +150,10 @@
             <span class="n">lon</span> <span class="o">=</span> <span class="n">numpy</span><span class="o">.</span><span class="n">mod</span><span class="p">(</span><span class="n">lon</span><span class="p">,</span> <span class="mf">360.0</span><span class="p">)</span>
         <span class="k">return</span> <span class="n">lon</span><span class="p">,</span> <span class="n">lat</span></div>
 
-<div class="viewcode-block" id="UTMCoordinateSystem.to_xy"><a class="viewcode-back" href="../../thetis.html#thetis.coordsys.UTMCoordinateSystem.to_xy">[docs]</a>    <span class="k">def</span> <span class="nf">to_xy</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">lon</span><span class="p">,</span> <span class="n">lat</span><span class="p">):</span>
+
+<div class="viewcode-block" id="UTMCoordinateSystem.to_xy">
+<a class="viewcode-back" href="../../thetis.html#thetis.coordsys.UTMCoordinateSystem.to_xy">[docs]</a>
+    <span class="k">def</span> <span class="nf">to_xy</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">lon</span><span class="p">,</span> <span class="n">lat</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Convert (latitude, longitude) coordinates to (x, y)</span>
 
@@ -149,7 +166,10 @@
         <span class="n">x</span><span class="p">,</span> <span class="n">y</span> <span class="o">=</span> <span class="n">proj_transform</span><span class="p">(</span><span class="n">lon</span><span class="p">,</span> <span class="n">lat</span><span class="p">,</span> <span class="n">trans</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">transformer_xy</span><span class="p">)</span>
         <span class="k">return</span> <span class="n">x</span><span class="p">,</span> <span class="n">y</span></div>
 
-<div class="viewcode-block" id="UTMCoordinateSystem.get_mesh_lonlat_function"><a class="viewcode-back" href="../../thetis.html#thetis.coordsys.UTMCoordinateSystem.get_mesh_lonlat_function">[docs]</a>    <span class="k">def</span> <span class="nf">get_mesh_lonlat_function</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">mesh2d</span><span class="p">):</span>
+
+<div class="viewcode-block" id="UTMCoordinateSystem.get_mesh_lonlat_function">
+<a class="viewcode-back" href="../../thetis.html#thetis.coordsys.UTMCoordinateSystem.get_mesh_lonlat_function">[docs]</a>
+    <span class="k">def</span> <span class="nf">get_mesh_lonlat_function</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">mesh2d</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Construct a :class:`Function` holding the mesh coordinates in</span>
 <span class="sd">        longitude-latitude coordinates.</span>
@@ -169,17 +189,24 @@
         <span class="n">lonlat</span><span class="o">.</span><span class="n">dat</span><span class="o">.</span><span class="n">data</span><span class="p">[:,</span> <span class="mi">1</span><span class="p">]</span> <span class="o">=</span> <span class="n">lat</span>
         <span class="k">return</span> <span class="n">lonlat</span></div>
 
-<div class="viewcode-block" id="UTMCoordinateSystem.get_vector_rotator"><a class="viewcode-back" href="../../thetis.html#thetis.coordsys.UTMCoordinateSystem.get_vector_rotator">[docs]</a>    <span class="k">def</span> <span class="nf">get_vector_rotator</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">lon</span><span class="p">,</span> <span class="n">lat</span><span class="p">):</span>
+
+<div class="viewcode-block" id="UTMCoordinateSystem.get_vector_rotator">
+<a class="viewcode-back" href="../../thetis.html#thetis.coordsys.UTMCoordinateSystem.get_vector_rotator">[docs]</a>
+    <span class="k">def</span> <span class="nf">get_vector_rotator</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">lon</span><span class="p">,</span> <span class="n">lat</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Returns a vector rotator object.</span>
 
 <span class="sd">        The rotator converts vector-valued data from longitude, latitude</span>
 <span class="sd">        coordinates to mesh coordinate system.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="k">return</span> <span class="n">VectorCoordSysRotation</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">transformer_xy</span><span class="p">,</span> <span class="n">lon</span><span class="p">,</span> <span class="n">lat</span><span class="p">)</span></div></div>
+        <span class="k">return</span> <span class="n">VectorCoordSysRotation</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">transformer_xy</span><span class="p">,</span> <span class="n">lon</span><span class="p">,</span> <span class="n">lat</span><span class="p">)</span></div>
+</div>
 
 
-<div class="viewcode-block" id="get_vector_rotation_matrix"><a class="viewcode-back" href="../../thetis.html#thetis.coordsys.get_vector_rotation_matrix">[docs]</a><span class="k">def</span> <span class="nf">get_vector_rotation_matrix</span><span class="p">(</span><span class="n">trans</span><span class="p">,</span> <span class="n">x</span><span class="p">,</span> <span class="n">y</span><span class="p">,</span> <span class="n">delta</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
+
+<div class="viewcode-block" id="get_vector_rotation_matrix">
+<a class="viewcode-back" href="../../thetis.html#thetis.coordsys.get_vector_rotation_matrix">[docs]</a>
+<span class="k">def</span> <span class="nf">get_vector_rotation_matrix</span><span class="p">(</span><span class="n">trans</span><span class="p">,</span> <span class="n">x</span><span class="p">,</span> <span class="n">y</span><span class="p">,</span> <span class="n">delta</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Estimate rotation matrix that converts vectors defined in source_sys to</span>
 <span class="sd">    target_sys. Conversion is carried out by the given `trans` object.</span>
@@ -213,7 +240,10 @@
     <span class="k">return</span> <span class="n">R</span><span class="p">,</span> <span class="n">theta</span></div>
 
 
-<div class="viewcode-block" id="VectorCoordSysRotation"><a class="viewcode-back" href="../../thetis.html#thetis.coordsys.VectorCoordSysRotation">[docs]</a><span class="k">class</span> <span class="nc">VectorCoordSysRotation</span><span class="p">(</span><span class="nb">object</span><span class="p">):</span>
+
+<div class="viewcode-block" id="VectorCoordSysRotation">
+<a class="viewcode-back" href="../../thetis.html#thetis.coordsys.VectorCoordSysRotation">[docs]</a>
+<span class="k">class</span> <span class="nc">VectorCoordSysRotation</span><span class="p">(</span><span class="nb">object</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Rotates vectors defined in source_sys coordinates to a different coordinate</span>
 <span class="sd">    system.</span>
@@ -242,6 +272,7 @@
         <span class="n">u</span> <span class="o">=</span> <span class="n">v_x</span> <span class="o">*</span> <span class="bp">self</span><span class="o">.</span><span class="n">rotation_cos</span><span class="p">[</span><span class="n">f</span><span class="p">]</span> <span class="o">-</span> <span class="n">v_y</span> <span class="o">*</span> <span class="bp">self</span><span class="o">.</span><span class="n">rotation_sin</span><span class="p">[</span><span class="n">f</span><span class="p">]</span>
         <span class="n">v</span> <span class="o">=</span> <span class="n">v_x</span> <span class="o">*</span> <span class="bp">self</span><span class="o">.</span><span class="n">rotation_sin</span><span class="p">[</span><span class="n">f</span><span class="p">]</span> <span class="o">+</span> <span class="n">v_y</span> <span class="o">*</span> <span class="bp">self</span><span class="o">.</span><span class="n">rotation_cos</span><span class="p">[</span><span class="n">f</span><span class="p">]</span>
         <span class="k">return</span> <span class="n">u</span><span class="p">,</span> <span class="n">v</span></div>
+
 </pre></div>
 
             <div class="clearer"></div>
@@ -252,8 +283,8 @@
       <div class="clearer"></div>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2016-2023, Tuomas Kärnä et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.5.0.
+    &#169; Copyright 2016-2023, Tuomas Kärnä et al..
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 7.2.6.
     </div>
   </body>
 </html>
