--- a/_modules/thetis/exner_eq.html
+++ b/_modules/thetis/exner_eq.html
@@ -1,17 +1,15 @@
-
 <!DOCTYPE html>
 
-<html>
+<html lang="en" data-content_root="../../">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.exner_eq &#8212; Thetis 0+untagged.2009.gd7af522 documentation</title>
-    <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
-    <link rel="stylesheet" type="text/css" href="../../_static/thetis.css" />
-    <script data-url_root="../../" id="documentation_options" src="../../_static/documentation_options.js"></script>
-    <script src="../../_static/jquery.js"></script>
-    <script src="../../_static/underscore.js"></script>
-    <script src="../../_static/doctools.js"></script>
+    <title>thetis.exner_eq &#8212; Thetis 0+untagged.2009.gb75eefa documentation</title>
+    <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=fa44fd50" />
+    <link rel="stylesheet" type="text/css" href="../../_static/thetis.css?v=0f3339d6" />
+    <script src="../../_static/documentation_options.js?v=47a7fef3"></script>
+    <script src="../../_static/doctools.js?v=888ff710"></script>
+    <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
 <!--[if lte IE 6]>
@@ -79,7 +77,9 @@
 <span class="p">]</span>
 
 
-<div class="viewcode-block" id="ExnerTerm"><a class="viewcode-back" href="../../thetis.html#thetis.exner_eq.ExnerTerm">[docs]</a><span class="k">class</span> <span class="nc">ExnerTerm</span><span class="p">(</span><span class="n">Term</span><span class="p">):</span>
+<div class="viewcode-block" id="ExnerTerm">
+<a class="viewcode-back" href="../../thetis.html#thetis.exner_eq.ExnerTerm">[docs]</a>
+<span class="k">class</span> <span class="nc">ExnerTerm</span><span class="p">(</span><span class="n">Term</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Generic term in the Exner equations that provides commonly used members</span>
 <span class="sd">    There are no boundary conditions for the Exner equation.</span>
@@ -106,7 +106,10 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">depth_integrated_sediment</span> <span class="o">=</span> <span class="n">depth_integrated_sediment</span></div>
 
 
-<div class="viewcode-block" id="ExnerSourceTerm"><a class="viewcode-back" href="../../thetis.html#thetis.exner_eq.ExnerSourceTerm">[docs]</a><span class="k">class</span> <span class="nc">ExnerSourceTerm</span><span class="p">(</span><span class="n">ExnerTerm</span><span class="p">):</span>
+
+<div class="viewcode-block" id="ExnerSourceTerm">
+<a class="viewcode-back" href="../../thetis.html#thetis.exner_eq.ExnerSourceTerm">[docs]</a>
+<span class="k">class</span> <span class="nc">ExnerSourceTerm</span><span class="p">(</span><span class="n">ExnerTerm</span><span class="p">):</span>
 <span class="w">    </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Source term accounting for suspended sediment transport</span>
 
@@ -118,7 +121,9 @@
 <span class="sd">    where :math:`\sigma` is a user defined source scalar field :class:`Function`</span>
 <span class="sd">    and :math:`\phi` is a user defined source scalar field :class:`Function`.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-<div class="viewcode-block" id="ExnerSourceTerm.residual"><a class="viewcode-back" href="../../thetis.html#thetis.exner_eq.ExnerSourceTerm.residual">[docs]</a>    <span class="k">def</span> <span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
+<div class="viewcode-block" id="ExnerSourceTerm.residual">
+<a class="viewcode-back" href="../../thetis.html#thetis.exner_eq.ExnerSourceTerm.residual">[docs]</a>
+    <span class="k">def</span> <span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
 
         <span class="n">f</span> <span class="o">=</span> <span class="mi">0</span>
         <span class="n">sediment</span> <span class="o">=</span> <span class="n">fields</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s1">&#39;sediment&#39;</span><span class="p">)</span>
@@ -134,10 +139,14 @@
             <span class="n">deposition</span> <span class="o">=</span> <span class="n">deposition</span><span class="o">/</span><span class="n">H</span>
         <span class="n">f</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">test</span><span class="o">*</span><span class="n">fac</span><span class="o">*</span><span class="p">(</span><span class="n">erosion</span> <span class="o">-</span> <span class="n">deposition</span><span class="p">)</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">dx</span>
 
-        <span class="k">return</span> <span class="n">f</span></div></div>
+        <span class="k">return</span> <span class="n">f</span></div>
+</div>
 
 
-<div class="viewcode-block" id="ExnerBedloadTerm"><a class="viewcode-back" href="../../thetis.html#thetis.exner_eq.ExnerBedloadTerm">[docs]</a><span class="k">class</span> <span class="nc">ExnerBedloadTerm</span><span class="p">(</span><span class="n">ExnerTerm</span><span class="p">):</span>
+
+<div class="viewcode-block" id="ExnerBedloadTerm">
+<a class="viewcode-back" href="../../thetis.html#thetis.exner_eq.ExnerBedloadTerm">[docs]</a>
+<span class="k">class</span> <span class="nc">ExnerBedloadTerm</span><span class="p">(</span><span class="n">ExnerTerm</span><span class="p">):</span>
 <span class="w">    </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Bedload transport term, \nabla_h \cdot \textbf{Q_b}</span>
 
@@ -150,7 +159,9 @@
 
 <span class="sd">    where :math:`\textbf{n}` is the unit normal of the element interfaces.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-<div class="viewcode-block" id="ExnerBedloadTerm.residual"><a class="viewcode-back" href="../../thetis.html#thetis.exner_eq.ExnerBedloadTerm.residual">[docs]</a>    <span class="k">def</span> <span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
+<div class="viewcode-block" id="ExnerBedloadTerm.residual">
+<a class="viewcode-back" href="../../thetis.html#thetis.exner_eq.ExnerBedloadTerm.residual">[docs]</a>
+    <span class="k">def</span> <span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
         <span class="n">f</span> <span class="o">=</span> <span class="mi">0</span>
 
         <span class="n">qbx</span><span class="p">,</span> <span class="n">qby</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">sediment_model</span><span class="o">.</span><span class="n">get_bedload_term</span><span class="p">(</span><span class="n">solution</span><span class="p">)</span>
@@ -179,7 +190,9 @@
 
         <span class="n">f</span> <span class="o">+=</span> <span class="p">(</span><span class="n">fac</span><span class="o">*</span><span class="n">qbx</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">test</span><span class="o">.</span><span class="n">dx</span><span class="p">(</span><span class="mi">0</span><span class="p">)</span> <span class="o">+</span> <span class="n">fac</span><span class="o">*</span><span class="n">qby</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">test</span><span class="o">.</span><span class="n">dx</span><span class="p">(</span><span class="mi">1</span><span class="p">))</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">dx</span>
 
-        <span class="k">return</span> <span class="o">-</span><span class="n">f</span></div></div>
+        <span class="k">return</span> <span class="o">-</span><span class="n">f</span></div>
+</div>
+
 
 
 <span class="k">class</span> <span class="nc">ExnerSedimentSlideTerm</span><span class="p">(</span><span class="n">ExnerTerm</span><span class="p">):</span>
@@ -202,7 +215,9 @@
         <span class="k">return</span> <span class="o">-</span><span class="n">f</span>
 
 
-<div class="viewcode-block" id="ExnerEquation"><a class="viewcode-back" href="../../thetis.html#thetis.exner_eq.ExnerEquation">[docs]</a><span class="k">class</span> <span class="nc">ExnerEquation</span><span class="p">(</span><span class="n">Equation</span><span class="p">):</span>
+<div class="viewcode-block" id="ExnerEquation">
+<a class="viewcode-back" href="../../thetis.html#thetis.exner_eq.ExnerEquation">[docs]</a>
+<span class="k">class</span> <span class="nc">ExnerEquation</span><span class="p">(</span><span class="n">Equation</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Exner equation</span>
 
@@ -227,6 +242,7 @@
             <span class="bp">self</span><span class="o">.</span><span class="n">add_term</span><span class="p">(</span><span class="n">ExnerBedloadTerm</span><span class="p">(</span><span class="o">*</span><span class="n">args</span><span class="p">),</span> <span class="s1">&#39;implicit&#39;</span><span class="p">)</span>
         <span class="k">if</span> <span class="n">sediment_model</span><span class="o">.</span><span class="n">use_sediment_slide</span><span class="p">:</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">add_term</span><span class="p">(</span><span class="n">ExnerSedimentSlideTerm</span><span class="p">(</span><span class="o">*</span><span class="n">args</span><span class="p">),</span> <span class="s1">&#39;implicit&#39;</span><span class="p">)</span></div>
+
 </pre></div>
 
             <div class="clearer"></div>
@@ -237,8 +253,8 @@
       <div class="clearer"></div>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2016-2023, Tuomas Kärnä et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.5.0.
+    &#169; Copyright 2016-2023, Tuomas Kärnä et al..
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 7.2.6.
     </div>
   </body>
 </html>
