--- a/_modules/thetis/coupled_timeintegrator.html
+++ b/_modules/thetis/coupled_timeintegrator.html
@@ -1,17 +1,15 @@
-
 <!DOCTYPE html>
 
-<html>
+<html lang="en" data-content_root="../../">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.coupled_timeintegrator &#8212; Thetis 0+untagged.2009.gd7af522 documentation</title>
-    <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
-    <link rel="stylesheet" type="text/css" href="../../_static/thetis.css" />
-    <script data-url_root="../../" id="documentation_options" src="../../_static/documentation_options.js"></script>
-    <script src="../../_static/jquery.js"></script>
-    <script src="../../_static/underscore.js"></script>
-    <script src="../../_static/doctools.js"></script>
+    <title>thetis.coupled_timeintegrator &#8212; Thetis 0+untagged.2009.gb75eefa documentation</title>
+    <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=fa44fd50" />
+    <link rel="stylesheet" type="text/css" href="../../_static/thetis.css?v=0f3339d6" />
+    <script src="../../_static/documentation_options.js?v=47a7fef3"></script>
+    <script src="../../_static/doctools.js?v=888ff710"></script>
+    <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
 <!--[if lte IE 6]>
@@ -62,7 +60,9 @@
 <span class="kn">import</span> <span class="nn">numpy</span>
 
 
-<div class="viewcode-block" id="CoupledTimeIntegratorBase"><a class="viewcode-back" href="../../thetis.html#thetis.coupled_timeintegrator.CoupledTimeIntegratorBase">[docs]</a><span class="k">class</span> <span class="nc">CoupledTimeIntegratorBase</span><span class="p">(</span><span class="n">timeintegrator</span><span class="o">.</span><span class="n">TimeIntegratorBase</span><span class="p">):</span>
+<div class="viewcode-block" id="CoupledTimeIntegratorBase">
+<a class="viewcode-back" href="../../thetis.html#thetis.coupled_timeintegrator.CoupledTimeIntegratorBase">[docs]</a>
+<span class="k">class</span> <span class="nc">CoupledTimeIntegratorBase</span><span class="p">(</span><span class="n">timeintegrator</span><span class="o">.</span><span class="n">TimeIntegratorBase</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Base class for coupled 2D-3D time integrators</span>
 
@@ -180,7 +180,10 @@
             <span class="bp">self</span><span class="o">.</span><span class="n">_update_stabilization_params</span><span class="p">()</span></div>
 
 
-<div class="viewcode-block" id="CoupledTimeIntegrator"><a class="viewcode-back" href="../../thetis.html#thetis.coupled_timeintegrator.CoupledTimeIntegrator">[docs]</a><span class="k">class</span> <span class="nc">CoupledTimeIntegrator</span><span class="p">(</span><span class="n">CoupledTimeIntegratorBase</span><span class="p">,</span> <span class="n">ABC</span><span class="p">):</span>
+
+<div class="viewcode-block" id="CoupledTimeIntegrator">
+<a class="viewcode-back" href="../../thetis.html#thetis.coupled_timeintegrator.CoupledTimeIntegrator">[docs]</a>
+<span class="k">class</span> <span class="nc">CoupledTimeIntegrator</span><span class="p">(</span><span class="n">CoupledTimeIntegratorBase</span><span class="p">,</span> <span class="n">ABC</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Base class of mode-split time integrators that use 2D, 3D and implicit 3D</span>
 <span class="sd">    time integrators.</span>
@@ -400,7 +403,9 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">cfl_coeff_3d</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">timesteppers</span><span class="o">.</span><span class="n">mom_expl</span><span class="o">.</span><span class="n">cfl_coeff</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">cfl_coeff_2d</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">timesteppers</span><span class="o">.</span><span class="n">swe2d</span><span class="o">.</span><span class="n">cfl_coeff</span>
 
-<div class="viewcode-block" id="CoupledTimeIntegrator.set_dt"><a class="viewcode-back" href="../../thetis.html#thetis.coupled_timeintegrator.CoupledTimeIntegrator.set_dt">[docs]</a>    <span class="k">def</span> <span class="nf">set_dt</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">dt</span><span class="p">,</span> <span class="n">dt_2d</span><span class="p">):</span>
+<div class="viewcode-block" id="CoupledTimeIntegrator.set_dt">
+<a class="viewcode-back" href="../../thetis.html#thetis.coupled_timeintegrator.CoupledTimeIntegrator.set_dt">[docs]</a>
+    <span class="k">def</span> <span class="nf">set_dt</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">dt</span><span class="p">,</span> <span class="n">dt_2d</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Set time step for the coupled time integrator</span>
 
@@ -419,7 +424,10 @@
         <span class="k">for</span> <span class="n">stepper</span> <span class="ow">in</span> <span class="nb">sorted</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">timesteppers</span><span class="p">):</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">timesteppers</span><span class="p">[</span><span class="n">stepper</span><span class="p">]</span><span class="o">.</span><span class="n">set_dt</span><span class="p">(</span><span class="n">dt</span><span class="p">)</span></div>
 
-<div class="viewcode-block" id="CoupledTimeIntegrator.initialize"><a class="viewcode-back" href="../../thetis.html#thetis.coupled_timeintegrator.CoupledTimeIntegrator.initialize">[docs]</a>    <span class="k">def</span> <span class="nf">initialize</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+
+<div class="viewcode-block" id="CoupledTimeIntegrator.initialize">
+<a class="viewcode-back" href="../../thetis.html#thetis.coupled_timeintegrator.CoupledTimeIntegrator.initialize">[docs]</a>
+    <span class="k">def</span> <span class="nf">initialize</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Assign initial conditions to all necessary fields</span>
 
@@ -445,10 +453,14 @@
             <span class="bp">self</span><span class="o">.</span><span class="n">timesteppers</span><span class="o">.</span><span class="n">psi_expl</span><span class="o">.</span><span class="n">initialize</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">fields</span><span class="o">.</span><span class="n">psi_3d</span><span class="p">)</span>
         <span class="k">if</span> <span class="s1">&#39;tke_expl&#39;</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">timesteppers</span><span class="p">:</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">timesteppers</span><span class="o">.</span><span class="n">tke_expl</span><span class="o">.</span><span class="n">initialize</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">fields</span><span class="o">.</span><span class="n">tke_3d</span><span class="p">)</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">_initialized</span> <span class="o">=</span> <span class="kc">True</span></div></div>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_initialized</span> <span class="o">=</span> <span class="kc">True</span></div>
+</div>
 
 
-<div class="viewcode-block" id="CoupledLeapFrogAM3"><a class="viewcode-back" href="../../thetis.html#thetis.coupled_timeintegrator.CoupledLeapFrogAM3">[docs]</a><span class="k">class</span> <span class="nc">CoupledLeapFrogAM3</span><span class="p">(</span><span class="n">CoupledTimeIntegrator</span><span class="p">):</span>
+
+<div class="viewcode-block" id="CoupledLeapFrogAM3">
+<a class="viewcode-back" href="../../thetis.html#thetis.coupled_timeintegrator.CoupledLeapFrogAM3">[docs]</a>
+<span class="k">class</span> <span class="nc">CoupledLeapFrogAM3</span><span class="p">(</span><span class="n">CoupledTimeIntegrator</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Leap-Frog Adams-Moulton 3 time integrator for coupled 2D-3D problem</span>
 
@@ -470,7 +482,9 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">uv_old_2d</span> <span class="o">=</span> <span class="n">Function</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">fields</span><span class="o">.</span><span class="n">uv_2d</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">uv_new_2d</span> <span class="o">=</span> <span class="n">Function</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">fields</span><span class="o">.</span><span class="n">uv_2d</span><span class="p">)</span>
 
-<div class="viewcode-block" id="CoupledLeapFrogAM3.advance"><a class="viewcode-back" href="../../thetis.html#thetis.coupled_timeintegrator.CoupledLeapFrogAM3.advance">[docs]</a>    <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.CoupledLeapFrogAM3.advance&quot;</span><span class="p">)</span>
+<div class="viewcode-block" id="CoupledLeapFrogAM3.advance">
+<a class="viewcode-back" href="../../thetis.html#thetis.coupled_timeintegrator.CoupledLeapFrogAM3.advance">[docs]</a>
+    <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.CoupledLeapFrogAM3.advance&quot;</span><span class="p">)</span>
     <span class="k">def</span> <span class="nf">advance</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">t</span><span class="p">,</span> <span class="n">update_forcings</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">update_forcings3d</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Advances the equations for one time step</span>
@@ -610,10 +624,14 @@
             <span class="bp">self</span><span class="o">.</span><span class="n">_update_2d_coupling</span><span class="p">()</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">_update_baroclinicity</span><span class="p">()</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">_update_vertical_velocity</span><span class="p">()</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">_update_stabilization_params</span><span class="p">()</span></div></div>
+            <span class="bp">self</span><span class="o">.</span><span class="n">_update_stabilization_params</span><span class="p">()</span></div>
+</div>
 
 
-<div class="viewcode-block" id="CoupledTwoStageRK"><a class="viewcode-back" href="../../thetis.html#thetis.coupled_timeintegrator.CoupledTwoStageRK">[docs]</a><span class="k">class</span> <span class="nc">CoupledTwoStageRK</span><span class="p">(</span><span class="n">CoupledTimeIntegrator</span><span class="p">):</span>
+
+<div class="viewcode-block" id="CoupledTwoStageRK">
+<a class="viewcode-back" href="../../thetis.html#thetis.coupled_timeintegrator.CoupledTwoStageRK">[docs]</a>
+<span class="k">class</span> <span class="nc">CoupledTwoStageRK</span><span class="p">(</span><span class="n">CoupledTimeIntegrator</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Coupled time integrator based on SSPRK(2,2) scheme</span>
 
@@ -634,7 +652,9 @@
             <span class="n">e</span> <span class="o">=</span> <span class="n">Function</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">fields</span><span class="o">.</span><span class="n">elev_cg_2d</span><span class="p">)</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">elev_fields</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">e</span><span class="p">)</span>
 
-<div class="viewcode-block" id="CoupledTwoStageRK.store_elevation"><a class="viewcode-back" href="../../thetis.html#thetis.coupled_timeintegrator.CoupledTwoStageRK.store_elevation">[docs]</a>    <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.CoupledTwoStageRK.store_elevation&quot;</span><span class="p">)</span>
+<div class="viewcode-block" id="CoupledTwoStageRK.store_elevation">
+<a class="viewcode-back" href="../../thetis.html#thetis.coupled_timeintegrator.CoupledTwoStageRK.store_elevation">[docs]</a>
+    <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.CoupledTwoStageRK.store_elevation&quot;</span><span class="p">)</span>
     <span class="k">def</span> <span class="nf">store_elevation</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">istage</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Store current elevation field for computing mesh velocity</span>
@@ -648,7 +668,10 @@
             <span class="bp">self</span><span class="o">.</span><span class="n">solver</span><span class="o">.</span><span class="n">mesh_updater</span><span class="o">.</span><span class="n">compute_mesh_velocity_begin</span><span class="p">()</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">elev_fields</span><span class="p">[</span><span class="n">istage</span><span class="p">]</span><span class="o">.</span><span class="n">assign</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">fields</span><span class="o">.</span><span class="n">elev_cg_2d</span><span class="p">)</span></div>
 
-<div class="viewcode-block" id="CoupledTwoStageRK.compute_mesh_velocity"><a class="viewcode-back" href="../../thetis.html#thetis.coupled_timeintegrator.CoupledTwoStageRK.compute_mesh_velocity">[docs]</a>    <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.CoupledTwoStageRK.compute_mesh_velocity&quot;</span><span class="p">)</span>
+
+<div class="viewcode-block" id="CoupledTwoStageRK.compute_mesh_velocity">
+<a class="viewcode-back" href="../../thetis.html#thetis.coupled_timeintegrator.CoupledTwoStageRK.compute_mesh_velocity">[docs]</a>
+    <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.CoupledTwoStageRK.compute_mesh_velocity&quot;</span><span class="p">)</span>
     <span class="k">def</span> <span class="nf">compute_mesh_velocity</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">istage</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Computes mesh velocity for stage i</span>
@@ -670,7 +693,10 @@
             <span class="bp">self</span><span class="o">.</span><span class="n">solver</span><span class="o">.</span><span class="n">mesh_updater</span><span class="o">.</span><span class="n">compute_mesh_velocity_finalize</span><span class="p">(</span>
                 <span class="n">w_mesh_surf_expr</span><span class="o">=</span><span class="n">w_s</span><span class="p">)</span></div>
 
-<div class="viewcode-block" id="CoupledTwoStageRK.advance"><a class="viewcode-back" href="../../thetis.html#thetis.coupled_timeintegrator.CoupledTwoStageRK.advance">[docs]</a>    <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.CoupledTwoStageRK.advance&quot;</span><span class="p">)</span>
+
+<div class="viewcode-block" id="CoupledTwoStageRK.advance">
+<a class="viewcode-back" href="../../thetis.html#thetis.coupled_timeintegrator.CoupledTwoStageRK.advance">[docs]</a>
+    <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.CoupledTwoStageRK.advance&quot;</span><span class="p">)</span>
     <span class="k">def</span> <span class="nf">advance</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">t</span><span class="p">,</span> <span class="n">update_forcings</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">update_forcings3d</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Advances the equations for one time step</span>
@@ -760,7 +786,9 @@
                 <span class="c1"># update variables that explict solvers depend on</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">_update_2d_coupling</span><span class="p">()</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">_update_baroclinicity</span><span class="p">()</span>
-                <span class="bp">self</span><span class="o">.</span><span class="n">_update_vertical_velocity</span><span class="p">()</span></div></div>
+                <span class="bp">self</span><span class="o">.</span><span class="n">_update_vertical_velocity</span><span class="p">()</span></div>
+</div>
+
 </pre></div>
 
             <div class="clearer"></div>
@@ -771,8 +799,8 @@
       <div class="clearer"></div>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2016-2023, Tuomas Kärnä et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.5.0.
+    &#169; Copyright 2016-2023, Tuomas Kärnä et al..
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 7.2.6.
     </div>
   </body>
 </html>
