--- a/_modules/thetis/diagnostics.html
+++ b/_modules/thetis/diagnostics.html
@@ -1,17 +1,15 @@
-
 <!DOCTYPE html>
 
-<html>
+<html lang="en" data-content_root="../../">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.diagnostics &#8212; Thetis 0+untagged.2009.gd7af522 documentation</title>
-    <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
-    <link rel="stylesheet" type="text/css" href="../../_static/thetis.css" />
-    <script data-url_root="../../" id="documentation_options" src="../../_static/documentation_options.js"></script>
-    <script src="../../_static/jquery.js"></script>
-    <script src="../../_static/underscore.js"></script>
-    <script src="../../_static/doctools.js"></script>
+    <title>thetis.diagnostics &#8212; Thetis 0+untagged.2009.gb75eefa documentation</title>
+    <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=fa44fd50" />
+    <link rel="stylesheet" type="text/css" href="../../_static/thetis.css?v=0f3339d6" />
+    <script src="../../_static/documentation_options.js?v=47a7fef3"></script>
+    <script src="../../_static/doctools.js?v=888ff710"></script>
+    <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
 <!--[if lte IE 6]>
@@ -76,7 +74,9 @@
         <span class="k">pass</span>
 
 
-<div class="viewcode-block" id="VorticityCalculator2D"><a class="viewcode-back" href="../../thetis.html#thetis.diagnostics.VorticityCalculator2D">[docs]</a><span class="k">class</span> <span class="nc">VorticityCalculator2D</span><span class="p">(</span><span class="n">DiagnosticCalculator</span><span class="p">):</span>
+<div class="viewcode-block" id="VorticityCalculator2D">
+<a class="viewcode-back" href="../../thetis.html#thetis.diagnostics.VorticityCalculator2D">[docs]</a>
+<span class="k">class</span> <span class="nc">VorticityCalculator2D</span><span class="p">(</span><span class="n">DiagnosticCalculator</span><span class="p">):</span>
 <span class="w">    </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Linear solver for recovering fluid vorticity,</span>
 <span class="sd">    interpreted as a scalar field:</span>
@@ -125,12 +125,18 @@
         <span class="p">})</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">solver</span> <span class="o">=</span> <span class="n">LinearVariationalSolver</span><span class="p">(</span><span class="n">prob</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span>
 
-<div class="viewcode-block" id="VorticityCalculator2D.solve"><a class="viewcode-back" href="../../thetis.html#thetis.diagnostics.VorticityCalculator2D.solve">[docs]</a>    <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.VorticityCalculator2D.solve&quot;</span><span class="p">)</span>
+<div class="viewcode-block" id="VorticityCalculator2D.solve">
+<a class="viewcode-back" href="../../thetis.html#thetis.diagnostics.VorticityCalculator2D.solve">[docs]</a>
+    <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.VorticityCalculator2D.solve&quot;</span><span class="p">)</span>
     <span class="k">def</span> <span class="nf">solve</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">solver</span><span class="o">.</span><span class="n">solve</span><span class="p">()</span></div></div>
+        <span class="bp">self</span><span class="o">.</span><span class="n">solver</span><span class="o">.</span><span class="n">solve</span><span class="p">()</span></div>
+</div>
 
 
-<div class="viewcode-block" id="HessianRecoverer2D"><a class="viewcode-back" href="../../thetis.html#thetis.diagnostics.HessianRecoverer2D">[docs]</a><span class="k">class</span> <span class="nc">HessianRecoverer2D</span><span class="p">(</span><span class="n">DiagnosticCalculator</span><span class="p">):</span>
+
+<div class="viewcode-block" id="HessianRecoverer2D">
+<a class="viewcode-back" href="../../thetis.html#thetis.diagnostics.HessianRecoverer2D">[docs]</a>
+<span class="k">class</span> <span class="nc">HessianRecoverer2D</span><span class="p">(</span><span class="n">DiagnosticCalculator</span><span class="p">):</span>
 <span class="w">    </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Linear solver for recovering Hessians.</span>
 
@@ -228,15 +234,21 @@
         <span class="n">kwargs</span><span class="o">.</span><span class="n">setdefault</span><span class="p">(</span><span class="s1">&#39;solver_parameters&#39;</span><span class="p">,</span> <span class="n">sp</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">solver</span> <span class="o">=</span> <span class="n">LinearVariationalSolver</span><span class="p">(</span><span class="n">prob</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span>
 
-<div class="viewcode-block" id="HessianRecoverer2D.solve"><a class="viewcode-back" href="../../thetis.html#thetis.diagnostics.HessianRecoverer2D.solve">[docs]</a>    <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.HessianRecoverer2D.solve&quot;</span><span class="p">)</span>
+<div class="viewcode-block" id="HessianRecoverer2D.solve">
+<a class="viewcode-back" href="../../thetis.html#thetis.diagnostics.HessianRecoverer2D.solve">[docs]</a>
+    <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.HessianRecoverer2D.solve&quot;</span><span class="p">)</span>
     <span class="k">def</span> <span class="nf">solve</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">solver</span><span class="o">.</span><span class="n">solve</span><span class="p">()</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">hessian_2d</span><span class="o">.</span><span class="n">assign</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_hessian</span><span class="p">)</span>
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">gradient_2d</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">gradient_2d</span><span class="o">.</span><span class="n">assign</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_gradient</span><span class="p">)</span></div></div>
+            <span class="bp">self</span><span class="o">.</span><span class="n">gradient_2d</span><span class="o">.</span><span class="n">assign</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_gradient</span><span class="p">)</span></div>
+</div>
 
 
-<div class="viewcode-block" id="KineticEnergyCalculator"><a class="viewcode-back" href="../../thetis.html#thetis.diagnostics.KineticEnergyCalculator">[docs]</a><span class="k">class</span> <span class="nc">KineticEnergyCalculator</span><span class="p">(</span><span class="n">DiagnosticCalculator</span><span class="p">):</span>
+
+<div class="viewcode-block" id="KineticEnergyCalculator">
+<a class="viewcode-back" href="../../thetis.html#thetis.diagnostics.KineticEnergyCalculator">[docs]</a>
+<span class="k">class</span> <span class="nc">KineticEnergyCalculator</span><span class="p">(</span><span class="n">DiagnosticCalculator</span><span class="p">):</span>
 <span class="w">    </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Class for calculating dynamic pressure (i.e. kinetic energy),</span>
 
@@ -269,13 +281,17 @@
         <span class="k">else</span><span class="p">:</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">interpolator</span> <span class="o">=</span> <span class="n">Interpolator</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">ke_expr</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">ke</span><span class="p">)</span>
 
-<div class="viewcode-block" id="KineticEnergyCalculator.solve"><a class="viewcode-back" href="../../thetis.html#thetis.diagnostics.KineticEnergyCalculator.solve">[docs]</a>    <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.KineticEnergyCalculator.solve&quot;</span><span class="p">)</span>
+<div class="viewcode-block" id="KineticEnergyCalculator.solve">
+<a class="viewcode-back" href="../../thetis.html#thetis.diagnostics.KineticEnergyCalculator.solve">[docs]</a>
+    <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.KineticEnergyCalculator.solve&quot;</span><span class="p">)</span>
     <span class="k">def</span> <span class="nf">solve</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">if</span> <span class="nb">hasattr</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="s1">&#39;projector&#39;</span><span class="p">):</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">projector</span><span class="o">.</span><span class="n">project</span><span class="p">()</span>
         <span class="k">else</span><span class="p">:</span>
             <span class="k">assert</span> <span class="nb">hasattr</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="s1">&#39;interpolator&#39;</span><span class="p">)</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">interpolator</span><span class="o">.</span><span class="n">interpolate</span><span class="p">()</span></div></div>
+            <span class="bp">self</span><span class="o">.</span><span class="n">interpolator</span><span class="o">.</span><span class="n">interpolate</span><span class="p">()</span></div>
+</div>
+
 
 
 <span class="k">class</span> <span class="nc">DualWeightedResidual2D</span><span class="p">(</span><span class="n">DiagnosticCalculator</span><span class="p">):</span>
@@ -329,7 +345,9 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">error</span> <span class="o">=</span> <span class="n">form2indicator</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">F</span><span class="p">)</span>
 
 
-<div class="viewcode-block" id="ShallowWaterDualWeightedResidual2D"><a class="viewcode-back" href="../../thetis.html#thetis.diagnostics.ShallowWaterDualWeightedResidual2D">[docs]</a><span class="k">class</span> <span class="nc">ShallowWaterDualWeightedResidual2D</span><span class="p">(</span><span class="n">DualWeightedResidual2D</span><span class="p">):</span>
+<div class="viewcode-block" id="ShallowWaterDualWeightedResidual2D">
+<a class="viewcode-back" href="../../thetis.html#thetis.diagnostics.ShallowWaterDualWeightedResidual2D">[docs]</a>
+<span class="k">class</span> <span class="nc">ShallowWaterDualWeightedResidual2D</span><span class="p">(</span><span class="n">DualWeightedResidual2D</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Class for computing dual weighted residual contributions</span>
 <span class="sd">    for the shallow water equations.</span>
@@ -358,7 +376,10 @@
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">solver_obj</span><span class="o">.</span><span class="n">function_spaces</span><span class="o">.</span><span class="n">V_2d</span></div>
 
 
-<div class="viewcode-block" id="TracerDualWeightedResidual2D"><a class="viewcode-back" href="../../thetis.html#thetis.diagnostics.TracerDualWeightedResidual2D">[docs]</a><span class="k">class</span> <span class="nc">TracerDualWeightedResidual2D</span><span class="p">(</span><span class="n">DualWeightedResidual2D</span><span class="p">):</span>
+
+<div class="viewcode-block" id="TracerDualWeightedResidual2D">
+<a class="viewcode-back" href="../../thetis.html#thetis.diagnostics.TracerDualWeightedResidual2D">[docs]</a>
+<span class="k">class</span> <span class="nc">TracerDualWeightedResidual2D</span><span class="p">(</span><span class="n">DualWeightedResidual2D</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Class for computing dual weighted residual contributions</span>
 <span class="sd">    for 2D tracer transport problems.</span>
@@ -385,6 +406,7 @@
     <span class="nd">@property</span>
     <span class="k">def</span> <span class="nf">space</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">solver_obj</span><span class="o">.</span><span class="n">function_spaces</span><span class="o">.</span><span class="n">Q_2d</span></div>
+
 </pre></div>
 
             <div class="clearer"></div>
@@ -395,8 +417,8 @@
       <div class="clearer"></div>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2016-2023, Tuomas Kärnä et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.5.0.
+    &#169; Copyright 2016-2023, Tuomas Kärnä et al..
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 7.2.6.
     </div>
   </body>
 </html>
