--- a/_modules/thetis/equation.html
+++ b/_modules/thetis/equation.html
@@ -1,17 +1,15 @@
-
 <!DOCTYPE html>
 
-<html>
+<html lang="en" data-content_root="../../">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.equation &#8212; Thetis 0+untagged.2009.gd7af522 documentation</title>
-    <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
-    <link rel="stylesheet" type="text/css" href="../../_static/thetis.css" />
-    <script data-url_root="../../" id="documentation_options" src="../../_static/documentation_options.js"></script>
-    <script src="../../_static/jquery.js"></script>
-    <script src="../../_static/underscore.js"></script>
-    <script src="../../_static/doctools.js"></script>
+    <title>thetis.equation &#8212; Thetis 0+untagged.2009.gb75eefa documentation</title>
+    <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=fa44fd50" />
+    <link rel="stylesheet" type="text/css" href="../../_static/thetis.css?v=0f3339d6" />
+    <script src="../../_static/documentation_options.js?v=47a7fef3"></script>
+    <script src="../../_static/doctools.js?v=888ff710"></script>
+    <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
 <!--[if lte IE 6]>
@@ -59,7 +57,9 @@
 <span class="kn">from</span> <span class="nn">collections</span> <span class="kn">import</span> <span class="n">OrderedDict</span>
 
 
-<div class="viewcode-block" id="Term"><a class="viewcode-back" href="../../thetis.html#thetis.equation.Term">[docs]</a><span class="k">class</span> <span class="nc">Term</span><span class="p">(</span><span class="nb">object</span><span class="p">):</span>
+<div class="viewcode-block" id="Term">
+<a class="viewcode-back" href="../../thetis.html#thetis.equation.Term">[docs]</a>
+<span class="k">class</span> <span class="nc">Term</span><span class="p">(</span><span class="nb">object</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Implements a single term of an equation.</span>
 
@@ -82,7 +82,9 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">boundary_markers</span> <span class="o">=</span> <span class="nb">sorted</span><span class="p">(</span><span class="n">function_space</span><span class="o">.</span><span class="n">mesh</span><span class="p">()</span><span class="o">.</span><span class="n">exterior_facets</span><span class="o">.</span><span class="n">unique_markers</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">boundary_len</span> <span class="o">=</span> <span class="n">function_space</span><span class="o">.</span><span class="n">mesh</span><span class="p">()</span><span class="o">.</span><span class="n">boundary_len</span>
 
-<div class="viewcode-block" id="Term.residual"><a class="viewcode-back" href="../../thetis.html#thetis.equation.Term.residual">[docs]</a>    <span class="k">def</span> <span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
+<div class="viewcode-block" id="Term.residual">
+<a class="viewcode-back" href="../../thetis.html#thetis.equation.Term.residual">[docs]</a>
+    <span class="k">def</span> <span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Returns an UFL form of the term.</span>
 
@@ -96,7 +98,10 @@
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">raise</span> <span class="ne">NotImplementedError</span><span class="p">(</span><span class="s1">&#39;Must be implemented in the derived class&#39;</span><span class="p">)</span></div>
 
-<div class="viewcode-block" id="Term.jacobian"><a class="viewcode-back" href="../../thetis.html#thetis.equation.Term.jacobian">[docs]</a>    <span class="k">def</span> <span class="nf">jacobian</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
+
+<div class="viewcode-block" id="Term.jacobian">
+<a class="viewcode-back" href="../../thetis.html#thetis.equation.Term.jacobian">[docs]</a>
+    <span class="k">def</span> <span class="nf">jacobian</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Returns an UFL form of the Jacobian of the term.</span>
 
@@ -109,10 +114,14 @@
 <span class="sd">            E.g. {3: {&#39;elev_2d&#39;: Constant(1.0)}} replaces elev_2d function by a constant on boundary ID 3.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="c1"># TODO default behavior: symbolic expression, or implement only if user-defined?</span>
-        <span class="k">raise</span> <span class="ne">NotImplementedError</span><span class="p">(</span><span class="s1">&#39;Must be implemented in the derived class&#39;</span><span class="p">)</span></div></div>
+        <span class="k">raise</span> <span class="ne">NotImplementedError</span><span class="p">(</span><span class="s1">&#39;Must be implemented in the derived class&#39;</span><span class="p">)</span></div>
+</div>
 
 
-<div class="viewcode-block" id="Equation"><a class="viewcode-back" href="../../thetis.html#thetis.equation.Equation">[docs]</a><span class="k">class</span> <span class="nc">Equation</span><span class="p">(</span><span class="nb">object</span><span class="p">):</span>
+
+<div class="viewcode-block" id="Equation">
+<a class="viewcode-back" href="../../thetis.html#thetis.equation.Equation">[docs]</a>
+<span class="k">class</span> <span class="nc">Equation</span><span class="p">(</span><span class="nb">object</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Implements an equation, made out of terms.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
@@ -149,7 +158,9 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">xyz</span> <span class="o">=</span> <span class="n">SpatialCoordinate</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">mesh</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">e_x</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">e_y</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">e_y</span> <span class="o">=</span> <span class="n">unit_vectors</span><span class="p">(</span><span class="mi">3</span><span class="p">)</span>
 
-<div class="viewcode-block" id="Equation.mass_term"><a class="viewcode-back" href="../../thetis.html#thetis.equation.Equation.mass_term">[docs]</a>    <span class="k">def</span> <span class="nf">mass_term</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">):</span>
+<div class="viewcode-block" id="Equation.mass_term">
+<a class="viewcode-back" href="../../thetis.html#thetis.equation.Equation.mass_term">[docs]</a>
+    <span class="k">def</span> <span class="nf">mass_term</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Returns default mass matrix term for the solution function space.</span>
 
@@ -157,7 +168,10 @@
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="n">inner</span><span class="p">(</span><span class="n">solution</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">test</span><span class="p">)</span> <span class="o">*</span> <span class="n">dx</span></div>
 
-<div class="viewcode-block" id="Equation.add_term"><a class="viewcode-back" href="../../thetis.html#thetis.equation.Equation.add_term">[docs]</a>    <span class="k">def</span> <span class="nf">add_term</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">term</span><span class="p">,</span> <span class="n">label</span><span class="p">,</span> <span class="n">suffix</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
+
+<div class="viewcode-block" id="Equation.add_term">
+<a class="viewcode-back" href="../../thetis.html#thetis.equation.Equation.add_term">[docs]</a>
+    <span class="k">def</span> <span class="nf">add_term</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">term</span><span class="p">,</span> <span class="n">label</span><span class="p">,</span> <span class="n">suffix</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Adds a term in the equation</span>
 
@@ -172,7 +186,10 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">terms</span><span class="p">[</span><span class="n">key</span><span class="p">]</span> <span class="o">=</span> <span class="n">term</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">label_term</span><span class="p">(</span><span class="n">key</span><span class="p">,</span> <span class="n">label</span><span class="p">)</span></div>
 
-<div class="viewcode-block" id="Equation.label_term"><a class="viewcode-back" href="../../thetis.html#thetis.equation.Equation.label_term">[docs]</a>    <span class="k">def</span> <span class="nf">label_term</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">term</span><span class="p">,</span> <span class="n">label</span><span class="p">):</span>
+
+<div class="viewcode-block" id="Equation.label_term">
+<a class="viewcode-back" href="../../thetis.html#thetis.equation.Equation.label_term">[docs]</a>
+    <span class="k">def</span> <span class="nf">label_term</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">term</span><span class="p">,</span> <span class="n">label</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Assings a label to the given term(s).</span>
 
@@ -187,7 +204,10 @@
             <span class="k">for</span> <span class="n">k</span> <span class="ow">in</span> <span class="nb">iter</span><span class="p">(</span><span class="n">term</span><span class="p">):</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">label_term</span><span class="p">(</span><span class="n">k</span><span class="p">,</span> <span class="n">label</span><span class="p">)</span></div>
 
-<div class="viewcode-block" id="Equation.select_terms"><a class="viewcode-back" href="../../thetis.html#thetis.equation.Equation.select_terms">[docs]</a>    <span class="k">def</span> <span class="nf">select_terms</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">label</span><span class="p">):</span>
+
+<div class="viewcode-block" id="Equation.select_terms">
+<a class="viewcode-back" href="../../thetis.html#thetis.equation.Equation.select_terms">[docs]</a>
+    <span class="k">def</span> <span class="nf">select_terms</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">label</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Generator function that selects terms by label(s).</span>
 
@@ -205,7 +225,10 @@
             <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">labels</span><span class="p">[</span><span class="n">key</span><span class="p">]</span> <span class="ow">in</span> <span class="n">labels</span><span class="p">:</span>
                 <span class="k">yield</span> <span class="n">value</span></div>
 
-<div class="viewcode-block" id="Equation.residual"><a class="viewcode-back" href="../../thetis.html#thetis.equation.Equation.residual">[docs]</a>    <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.Equation.residual&quot;</span><span class="p">)</span>
+
+<div class="viewcode-block" id="Equation.residual">
+<a class="viewcode-back" href="../../thetis.html#thetis.equation.Equation.residual">[docs]</a>
+    <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.Equation.residual&quot;</span><span class="p">)</span>
     <span class="k">def</span> <span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">label</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Returns an UFL form of the residual by summing up all the terms with the desired label.</span>
@@ -228,7 +251,10 @@
             <span class="n">f</span> <span class="o">+=</span> <span class="n">term</span><span class="o">.</span><span class="n">residual</span><span class="p">(</span><span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">)</span>
         <span class="k">return</span> <span class="n">f</span></div>
 
-<div class="viewcode-block" id="Equation.jacobian"><a class="viewcode-back" href="../../thetis.html#thetis.equation.Equation.jacobian">[docs]</a>    <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.Equation.jacobian&quot;</span><span class="p">)</span>
+
+<div class="viewcode-block" id="Equation.jacobian">
+<a class="viewcode-back" href="../../thetis.html#thetis.equation.Equation.jacobian">[docs]</a>
+    <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.Equation.jacobian&quot;</span><span class="p">)</span>
     <span class="k">def</span> <span class="nf">jacobian</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">label</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Returns an UFL form of the Jacobian by summing up all the Jacobians of the terms.</span>
@@ -250,7 +276,9 @@
         <span class="k">for</span> <span class="n">term</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">select_terms</span><span class="p">(</span><span class="n">label</span><span class="p">):</span>
             <span class="c1"># FIXME check if jacobian exists?</span>
             <span class="n">f</span> <span class="o">+=</span> <span class="n">term</span><span class="o">.</span><span class="n">jacobian</span><span class="p">(</span><span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">)</span>
-        <span class="k">return</span> <span class="n">f</span></div></div>
+        <span class="k">return</span> <span class="n">f</span></div>
+</div>
+
 </pre></div>
 
             <div class="clearer"></div>
@@ -261,8 +289,8 @@
       <div class="clearer"></div>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2016-2023, Tuomas Kärnä et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.5.0.
+    &#169; Copyright 2016-2023, Tuomas Kärnä et al..
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 7.2.6.
     </div>
   </body>
 </html>
