--- a/_modules/thetis/implicitexplicit.html
+++ b/_modules/thetis/implicitexplicit.html
@@ -1,17 +1,15 @@
-
 <!DOCTYPE html>
 
-<html>
+<html lang="en" data-content_root="../../">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.implicitexplicit &#8212; Thetis 0+untagged.2009.gd7af522 documentation</title>
-    <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
-    <link rel="stylesheet" type="text/css" href="../../_static/thetis.css" />
-    <script data-url_root="../../" id="documentation_options" src="../../_static/documentation_options.js"></script>
-    <script src="../../_static/jquery.js"></script>
-    <script src="../../_static/underscore.js"></script>
-    <script src="../../_static/doctools.js"></script>
+    <title>thetis.implicitexplicit &#8212; Thetis 0+untagged.2009.gb75eefa documentation</title>
+    <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=fa44fd50" />
+    <link rel="stylesheet" type="text/css" href="../../_static/thetis.css?v=0f3339d6" />
+    <script src="../../_static/documentation_options.js?v=47a7fef3"></script>
+    <script src="../../_static/doctools.js?v=888ff710"></script>
+    <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
 <!--[if lte IE 6]>
@@ -58,7 +56,9 @@
 <span class="kn">from</span> <span class="nn">.rungekutta</span> <span class="kn">import</span> <span class="o">*</span>
 
 
-<div class="viewcode-block" id="IMEXGeneric"><a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXGeneric">[docs]</a><span class="k">class</span> <span class="nc">IMEXGeneric</span><span class="p">(</span><span class="n">TimeIntegrator</span><span class="p">,</span> <span class="n">ABC</span><span class="p">):</span>
+<div class="viewcode-block" id="IMEXGeneric">
+<a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXGeneric">[docs]</a>
+<span class="k">class</span> <span class="nc">IMEXGeneric</span><span class="p">(</span><span class="n">TimeIntegrator</span><span class="p">,</span> <span class="n">ABC</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Generic implementation of Runge-Kutta Implicit-Explicit schemes</span>
 
@@ -111,26 +111,37 @@
         <span class="c1"># FIXME may violate max DIRK SSP time step (if any)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">cfl_coeff</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">erk</span><span class="o">.</span><span class="n">cfl_coeff</span>
 
-<div class="viewcode-block" id="IMEXGeneric.update_solver"><a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXGeneric.update_solver">[docs]</a>    <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.IMEXGeneric.update_solver&quot;</span><span class="p">)</span>
+<div class="viewcode-block" id="IMEXGeneric.update_solver">
+<a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXGeneric.update_solver">[docs]</a>
+    <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.IMEXGeneric.update_solver&quot;</span><span class="p">)</span>
     <span class="k">def</span> <span class="nf">update_solver</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Create solver objects&quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">dirk</span><span class="o">.</span><span class="n">update_solver</span><span class="p">()</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">erk</span><span class="o">.</span><span class="n">update_solver</span><span class="p">()</span></div>
 
-<div class="viewcode-block" id="IMEXGeneric.initialize"><a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXGeneric.initialize">[docs]</a>    <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.IMEXGeneric.initialize&quot;</span><span class="p">)</span>
+
+<div class="viewcode-block" id="IMEXGeneric.initialize">
+<a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXGeneric.initialize">[docs]</a>
+    <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.IMEXGeneric.initialize&quot;</span><span class="p">)</span>
     <span class="k">def</span> <span class="nf">initialize</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Assigns initial conditions to all required fields.&quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">dirk</span><span class="o">.</span><span class="n">initialize</span><span class="p">(</span><span class="n">solution</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">erk</span><span class="o">.</span><span class="n">initialize</span><span class="p">(</span><span class="n">solution</span><span class="p">)</span></div>
 
-<div class="viewcode-block" id="IMEXGeneric.advance"><a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXGeneric.advance">[docs]</a>    <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.IMEXGeneric.advance&quot;</span><span class="p">)</span>
+
+<div class="viewcode-block" id="IMEXGeneric.advance">
+<a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXGeneric.advance">[docs]</a>
+    <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.IMEXGeneric.advance&quot;</span><span class="p">)</span>
     <span class="k">def</span> <span class="nf">advance</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">t</span><span class="p">,</span> <span class="n">update_forcings</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Advances equations for one time step.&quot;&quot;&quot;</span>
         <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">n_stages</span><span class="p">):</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">solve_stage</span><span class="p">(</span><span class="n">i</span><span class="p">,</span> <span class="n">t</span><span class="p">,</span> <span class="n">update_forcings</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">get_final_solution</span><span class="p">()</span></div>
 
-<div class="viewcode-block" id="IMEXGeneric.solve_stage"><a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXGeneric.solve_stage">[docs]</a>    <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.IMEXGeneric.solve_stage&quot;</span><span class="p">)</span>
+
+<div class="viewcode-block" id="IMEXGeneric.solve_stage">
+<a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXGeneric.solve_stage">[docs]</a>
+    <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.IMEXGeneric.solve_stage&quot;</span><span class="p">)</span>
     <span class="k">def</span> <span class="nf">solve_stage</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">i_stage</span><span class="p">,</span> <span class="n">t</span><span class="p">,</span> <span class="n">update_forcings</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Solves i-th stage</span>
@@ -146,7 +157,10 @@
         <span class="c1"># evaluate explicit tendency</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">erk</span><span class="o">.</span><span class="n">solve_tendency</span><span class="p">(</span><span class="n">i_stage</span><span class="p">,</span> <span class="n">t</span><span class="p">,</span> <span class="n">update_forcings</span><span class="p">)</span></div>
 
-<div class="viewcode-block" id="IMEXGeneric.get_final_solution"><a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXGeneric.get_final_solution">[docs]</a>    <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.IMEXGeneric.get_final_solution&quot;</span><span class="p">)</span>
+
+<div class="viewcode-block" id="IMEXGeneric.get_final_solution">
+<a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXGeneric.get_final_solution">[docs]</a>
+    <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.IMEXGeneric.get_final_solution&quot;</span><span class="p">)</span>
     <span class="k">def</span> <span class="nf">get_final_solution</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Evaluates the final solution.</span>
@@ -160,17 +174,24 @@
         <span class="c1"># update old solution</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">erk</span><span class="o">.</span><span class="n">solution_old</span><span class="o">.</span><span class="n">assign</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">dirk</span><span class="o">.</span><span class="n">solution</span><span class="p">)</span></div>
 
-<div class="viewcode-block" id="IMEXGeneric.set_dt"><a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXGeneric.set_dt">[docs]</a>    <span class="k">def</span> <span class="nf">set_dt</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">dt</span><span class="p">):</span>
+
+<div class="viewcode-block" id="IMEXGeneric.set_dt">
+<a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXGeneric.set_dt">[docs]</a>
+    <span class="k">def</span> <span class="nf">set_dt</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">dt</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Update time step</span>
 
 <span class="sd">        :arg float dt: time step</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">erk</span><span class="o">.</span><span class="n">set_dt</span><span class="p">(</span><span class="n">dt</span><span class="p">)</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">dirk</span><span class="o">.</span><span class="n">set_dt</span><span class="p">(</span><span class="n">dt</span><span class="p">)</span></div></div>
+        <span class="bp">self</span><span class="o">.</span><span class="n">dirk</span><span class="o">.</span><span class="n">set_dt</span><span class="p">(</span><span class="n">dt</span><span class="p">)</span></div>
+</div>
 
 
-<div class="viewcode-block" id="IMEXLPUM2"><a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXLPUM2">[docs]</a><span class="k">class</span> <span class="nc">IMEXLPUM2</span><span class="p">(</span><span class="n">IMEXGeneric</span><span class="p">):</span>
+
+<div class="viewcode-block" id="IMEXLPUM2">
+<a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXLPUM2">[docs]</a>
+<span class="k">class</span> <span class="nc">IMEXLPUM2</span><span class="p">(</span><span class="n">IMEXGeneric</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    SSP-IMEX RK scheme (20) in Higureras et al. (2014)</span>
 
@@ -184,7 +205,10 @@
     <span class="n">dirk_class</span> <span class="o">=</span> <span class="n">DIRKLPUM2</span></div>
 
 
-<div class="viewcode-block" id="IMEXLSPUM2"><a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXLSPUM2">[docs]</a><span class="k">class</span> <span class="nc">IMEXLSPUM2</span><span class="p">(</span><span class="n">IMEXGeneric</span><span class="p">):</span>
+
+<div class="viewcode-block" id="IMEXLSPUM2">
+<a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXLSPUM2">[docs]</a>
+<span class="k">class</span> <span class="nc">IMEXLSPUM2</span><span class="p">(</span><span class="n">IMEXGeneric</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    SSP-IMEX RK scheme (17) in Higureras et al. (2014)</span>
 
@@ -198,7 +222,10 @@
     <span class="n">dirk_class</span> <span class="o">=</span> <span class="n">DIRKLSPUM2</span></div>
 
 
-<div class="viewcode-block" id="IMEXMidpoint"><a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXMidpoint">[docs]</a><span class="k">class</span> <span class="nc">IMEXMidpoint</span><span class="p">(</span><span class="n">IMEXGeneric</span><span class="p">):</span>
+
+<div class="viewcode-block" id="IMEXMidpoint">
+<a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXMidpoint">[docs]</a>
+<span class="k">class</span> <span class="nc">IMEXMidpoint</span><span class="p">(</span><span class="n">IMEXGeneric</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Implicit-explicit midpoint scheme (1, 2, 2) from Ascher et al. (1997)</span>
 
@@ -210,12 +237,16 @@
     <span class="n">dirk_class</span> <span class="o">=</span> <span class="n">ESDIRKMidpoint</span></div>
 
 
-<div class="viewcode-block" id="IMEXEuler"><a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXEuler">[docs]</a><span class="k">class</span> <span class="nc">IMEXEuler</span><span class="p">(</span><span class="n">IMEXGeneric</span><span class="p">):</span>
+
+<div class="viewcode-block" id="IMEXEuler">
+<a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXEuler">[docs]</a>
+<span class="k">class</span> <span class="nc">IMEXEuler</span><span class="p">(</span><span class="n">IMEXGeneric</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Forward-Backward Euler</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">erk_class</span> <span class="o">=</span> <span class="n">ERKEuler</span>
     <span class="n">dirk_class</span> <span class="o">=</span> <span class="n">BackwardEuler</span></div>
+
 </pre></div>
 
             <div class="clearer"></div>
@@ -226,8 +257,8 @@
       <div class="clearer"></div>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2016-2023, Tuomas Kärnä et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.5.0.
+    &#169; Copyright 2016-2023, Tuomas Kärnä et al..
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 7.2.6.
     </div>
   </body>
 </html>
