--- a/_modules/thetis/log.html
+++ b/_modules/thetis/log.html
@@ -1,17 +1,15 @@
-
 <!DOCTYPE html>
 
-<html>
+<html lang="en" data-content_root="../../">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.log &#8212; Thetis 0+untagged.2009.gd7af522 documentation</title>
-    <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
-    <link rel="stylesheet" type="text/css" href="../../_static/thetis.css" />
-    <script data-url_root="../../" id="documentation_options" src="../../_static/documentation_options.js"></script>
-    <script src="../../_static/jquery.js"></script>
-    <script src="../../_static/underscore.js"></script>
-    <script src="../../_static/doctools.js"></script>
+    <title>thetis.log &#8212; Thetis 0+untagged.2009.gb75eefa documentation</title>
+    <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=fa44fd50" />
+    <link rel="stylesheet" type="text/css" href="../../_static/thetis.css?v=0f3339d6" />
+    <script src="../../_static/documentation_options.js?v=47a7fef3"></script>
+    <script src="../../_static/doctools.js?v=888ff710"></script>
+    <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
 <!--[if lte IE 6]>
@@ -93,7 +91,9 @@
     <span class="k">pass</span>
 
 
-<div class="viewcode-block" id="set_thetis_loggers"><a class="viewcode-back" href="../../thetis.html#thetis.log.set_thetis_loggers">[docs]</a><span class="k">def</span> <span class="nf">set_thetis_loggers</span><span class="p">(</span><span class="n">comm</span><span class="o">=</span><span class="n">COMM_WORLD</span><span class="p">):</span>
+<div class="viewcode-block" id="set_thetis_loggers">
+<a class="viewcode-back" href="../../thetis.html#thetis.log.set_thetis_loggers">[docs]</a>
+<span class="k">def</span> <span class="nf">set_thetis_loggers</span><span class="p">(</span><span class="n">comm</span><span class="o">=</span><span class="n">COMM_WORLD</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Set stream handlers for log messages.</span>
 
 <span class="sd">    :kwarg comm: The communicator the handler should be collective</span>
@@ -124,7 +124,10 @@
         <span class="n">add_stream_handler</span><span class="p">(</span><span class="n">buffered</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span></div>
 
 
-<div class="viewcode-block" id="set_log_directory"><a class="viewcode-back" href="../../thetis.html#thetis.log.set_log_directory">[docs]</a><span class="k">def</span> <span class="nf">set_log_directory</span><span class="p">(</span><span class="n">output_directory</span><span class="p">,</span> <span class="n">comm</span><span class="o">=</span><span class="n">COMM_WORLD</span><span class="p">,</span> <span class="n">mode</span><span class="o">=</span><span class="s1">&#39;w&#39;</span><span class="p">):</span>
+
+<div class="viewcode-block" id="set_log_directory">
+<a class="viewcode-back" href="../../thetis.html#thetis.log.set_log_directory">[docs]</a>
+<span class="k">def</span> <span class="nf">set_log_directory</span><span class="p">(</span><span class="n">output_directory</span><span class="p">,</span> <span class="n">comm</span><span class="o">=</span><span class="n">COMM_WORLD</span><span class="p">,</span> <span class="n">mode</span><span class="o">=</span><span class="s1">&#39;w&#39;</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Forward all log output to `output_directory/log` file.</span>
 
@@ -199,7 +202,10 @@
         <span class="n">warning</span><span class="p">(</span><span class="n">msg</span><span class="p">)</span>  <span class="c1"># to new log</span></div>
 
 
-<div class="viewcode-block" id="thetis_log_level"><a class="viewcode-back" href="../../thetis.html#thetis.log.thetis_log_level">[docs]</a><span class="k">def</span> <span class="nf">thetis_log_level</span><span class="p">(</span><span class="n">level</span><span class="p">):</span>
+
+<div class="viewcode-block" id="thetis_log_level">
+<a class="viewcode-back" href="../../thetis.html#thetis.log.thetis_log_level">[docs]</a>
+<span class="k">def</span> <span class="nf">thetis_log_level</span><span class="p">(</span><span class="n">level</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Set the log level for Thetis logger.</span>
 
 <span class="sd">    This controls what level of logging messages are printed to</span>
@@ -210,6 +216,7 @@
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">logger</span> <span class="o">=</span> <span class="n">logging</span><span class="o">.</span><span class="n">getLogger</span><span class="p">(</span><span class="s1">&#39;thetis&#39;</span><span class="p">)</span>
     <span class="n">logger</span><span class="o">.</span><span class="n">setLevel</span><span class="p">(</span><span class="n">level</span><span class="p">)</span></div>
+
 
 
 <span class="c1"># logger for error, warning etc messages</span>
@@ -235,8 +242,8 @@
       <div class="clearer"></div>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2016-2023, Tuomas Kärnä et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.5.0.
+    &#169; Copyright 2016-2023, Tuomas Kärnä et al..
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 7.2.6.
     </div>
   </body>
 </html>
