--- a/_modules/thetis/sediment_eq_2d.html
+++ b/_modules/thetis/sediment_eq_2d.html
@@ -1,17 +1,15 @@
-
 <!DOCTYPE html>
 
-<html>
+<html lang="en" data-content_root="../../">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.sediment_eq_2d &#8212; Thetis 0+untagged.2009.gd7af522 documentation</title>
-    <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
-    <link rel="stylesheet" type="text/css" href="../../_static/thetis.css" />
-    <script data-url_root="../../" id="documentation_options" src="../../_static/documentation_options.js"></script>
-    <script src="../../_static/jquery.js"></script>
-    <script src="../../_static/underscore.js"></script>
-    <script src="../../_static/doctools.js"></script>
+    <title>thetis.sediment_eq_2d &#8212; Thetis 0+untagged.2009.gb75eefa documentation</title>
+    <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=fa44fd50" />
+    <link rel="stylesheet" type="text/css" href="../../_static/thetis.css?v=0f3339d6" />
+    <script src="../../_static/documentation_options.js?v=47a7fef3"></script>
+    <script src="../../_static/doctools.js?v=888ff710"></script>
+    <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
 <!--[if lte IE 6]>
@@ -80,7 +78,9 @@
 <span class="p">]</span>
 
 
-<div class="viewcode-block" id="SedimentTerm"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_eq_2d.SedimentTerm">[docs]</a><span class="k">class</span> <span class="nc">SedimentTerm</span><span class="p">(</span><span class="n">TracerTerm</span><span class="p">):</span>
+<div class="viewcode-block" id="SedimentTerm">
+<a class="viewcode-back" href="../../thetis.html#thetis.sediment_eq_2d.SedimentTerm">[docs]</a>
+<span class="k">class</span> <span class="nc">SedimentTerm</span><span class="p">(</span><span class="n">TracerTerm</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Generic sediment term that provides commonly used members.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
@@ -95,7 +95,9 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">sediment_model</span> <span class="o">=</span> <span class="n">sediment_model</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">conservative</span> <span class="o">=</span> <span class="n">conservative</span>
 
-<div class="viewcode-block" id="SedimentTerm.get_bnd_functions"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_eq_2d.SedimentTerm.get_bnd_functions">[docs]</a>    <span class="k">def</span> <span class="nf">get_bnd_functions</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">c_in</span><span class="p">,</span> <span class="n">uv_in</span><span class="p">,</span> <span class="n">elev_in</span><span class="p">,</span> <span class="n">bnd_id</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
+<div class="viewcode-block" id="SedimentTerm.get_bnd_functions">
+<a class="viewcode-back" href="../../thetis.html#thetis.sediment_eq_2d.SedimentTerm.get_bnd_functions">[docs]</a>
+    <span class="k">def</span> <span class="nf">get_bnd_functions</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">c_in</span><span class="p">,</span> <span class="n">uv_in</span><span class="p">,</span> <span class="n">elev_in</span><span class="p">,</span> <span class="n">bnd_id</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
         <span class="n">funcs</span> <span class="o">=</span> <span class="n">bnd_conditions</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">bnd_id</span><span class="p">)</span>
         <span class="n">c_ext</span><span class="p">,</span> <span class="n">uv_ext</span><span class="p">,</span> <span class="n">elev_ext</span> <span class="o">=</span> <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="n">get_bnd_functions</span><span class="p">(</span><span class="n">c_in</span><span class="p">,</span> <span class="n">uv_in</span><span class="p">,</span> <span class="n">elev_in</span><span class="p">,</span> <span class="n">bnd_id</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">)</span>
         <span class="k">if</span> <span class="s1">&#39;equilibrium&#39;</span> <span class="ow">in</span> <span class="n">funcs</span><span class="p">:</span>
@@ -104,10 +106,14 @@
             <span class="n">c_ext</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">sediment_model</span><span class="o">.</span><span class="n">get_equilibrium_tracer</span><span class="p">()</span>
             <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">conservative</span><span class="p">:</span>
                 <span class="n">c_ext</span> <span class="o">=</span> <span class="n">c_ext</span> <span class="o">*</span> <span class="bp">self</span><span class="o">.</span><span class="n">depth</span><span class="o">.</span><span class="n">get_total_depth</span><span class="p">(</span><span class="n">elev_ext</span><span class="p">)</span>
-        <span class="k">return</span> <span class="n">c_ext</span><span class="p">,</span> <span class="n">uv_ext</span><span class="p">,</span> <span class="n">elev_ext</span></div></div>
+        <span class="k">return</span> <span class="n">c_ext</span><span class="p">,</span> <span class="n">uv_ext</span><span class="p">,</span> <span class="n">elev_ext</span></div>
+</div>
 
 
-<div class="viewcode-block" id="ConservativeSedimentAdvectionTerm"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_eq_2d.ConservativeSedimentAdvectionTerm">[docs]</a><span class="k">class</span> <span class="nc">ConservativeSedimentAdvectionTerm</span><span class="p">(</span><span class="n">SedimentTerm</span><span class="p">,</span> <span class="n">ConservativeHorizontalAdvectionTerm</span><span class="p">):</span>
+
+<div class="viewcode-block" id="ConservativeSedimentAdvectionTerm">
+<a class="viewcode-back" href="../../thetis.html#thetis.sediment_eq_2d.ConservativeSedimentAdvectionTerm">[docs]</a>
+<span class="k">class</span> <span class="nc">ConservativeSedimentAdvectionTerm</span><span class="p">(</span><span class="n">SedimentTerm</span><span class="p">,</span> <span class="n">ConservativeHorizontalAdvectionTerm</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Advection term for sediment equation</span>
 
@@ -116,13 +122,17 @@
     <span class="k">pass</span></div>
 
 
-<div class="viewcode-block" id="SedimentAdvectionTerm"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_eq_2d.SedimentAdvectionTerm">[docs]</a><span class="k">class</span> <span class="nc">SedimentAdvectionTerm</span><span class="p">(</span><span class="n">SedimentTerm</span><span class="p">,</span> <span class="n">HorizontalAdvectionTerm</span><span class="p">):</span>
+
+<div class="viewcode-block" id="SedimentAdvectionTerm">
+<a class="viewcode-back" href="../../thetis.html#thetis.sediment_eq_2d.SedimentAdvectionTerm">[docs]</a>
+<span class="k">class</span> <span class="nc">SedimentAdvectionTerm</span><span class="p">(</span><span class="n">SedimentTerm</span><span class="p">,</span> <span class="n">HorizontalAdvectionTerm</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Advection term for sediment equation</span>
 
 <span class="sd">    Same as :class:`HorizontalAdvectionTerm` but allows for equilibrium boundary condition</span>
 <span class="sd">    through get_bnd_conditions() inherited from :class:`SedimentTerm`.&quot;&quot;&quot;</span>
     <span class="k">pass</span></div>
+
 
 
 <span class="k">class</span> <span class="nc">SedimentDiffusionTerm</span><span class="p">(</span><span class="n">SedimentTerm</span><span class="p">,</span> <span class="n">HorizontalDiffusionTerm</span><span class="p">):</span>
@@ -134,30 +144,44 @@
     <span class="k">pass</span>
 
 
-<div class="viewcode-block" id="SedimentErosionTerm"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_eq_2d.SedimentErosionTerm">[docs]</a><span class="k">class</span> <span class="nc">SedimentErosionTerm</span><span class="p">(</span><span class="n">SedimentTerm</span><span class="p">):</span>
+<div class="viewcode-block" id="SedimentErosionTerm">
+<a class="viewcode-back" href="../../thetis.html#thetis.sediment_eq_2d.SedimentErosionTerm">[docs]</a>
+<span class="k">class</span> <span class="nc">SedimentErosionTerm</span><span class="p">(</span><span class="n">SedimentTerm</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Erosion term for sediment equation&quot;&quot;&quot;</span>
-<div class="viewcode-block" id="SedimentErosionTerm.residual"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_eq_2d.SedimentErosionTerm.residual">[docs]</a>    <span class="k">def</span> <span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
+<div class="viewcode-block" id="SedimentErosionTerm.residual">
+<a class="viewcode-back" href="../../thetis.html#thetis.sediment_eq_2d.SedimentErosionTerm.residual">[docs]</a>
+    <span class="k">def</span> <span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
         <span class="n">ero</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">sediment_model</span><span class="o">.</span><span class="n">get_erosion_term</span><span class="p">()</span>
         <span class="k">if</span> <span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">conservative</span><span class="p">:</span>
             <span class="n">elev</span> <span class="o">=</span> <span class="n">fields</span><span class="p">[</span><span class="s1">&#39;elev_2d&#39;</span><span class="p">]</span>
             <span class="n">ero</span> <span class="o">=</span> <span class="n">ero</span> <span class="o">/</span> <span class="bp">self</span><span class="o">.</span><span class="n">depth</span><span class="o">.</span><span class="n">get_total_depth</span><span class="p">(</span><span class="n">elev</span><span class="p">)</span>
         <span class="n">f</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">test</span> <span class="o">*</span> <span class="n">ero</span> <span class="o">*</span> <span class="bp">self</span><span class="o">.</span><span class="n">dx</span>
-        <span class="k">return</span> <span class="n">f</span></div></div>
+        <span class="k">return</span> <span class="n">f</span></div>
+</div>
 
 
-<div class="viewcode-block" id="SedimentDepositionTerm"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_eq_2d.SedimentDepositionTerm">[docs]</a><span class="k">class</span> <span class="nc">SedimentDepositionTerm</span><span class="p">(</span><span class="n">SedimentTerm</span><span class="p">):</span>
+
+<div class="viewcode-block" id="SedimentDepositionTerm">
+<a class="viewcode-back" href="../../thetis.html#thetis.sediment_eq_2d.SedimentDepositionTerm">[docs]</a>
+<span class="k">class</span> <span class="nc">SedimentDepositionTerm</span><span class="p">(</span><span class="n">SedimentTerm</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Deposition term for sediment equation&quot;&quot;&quot;</span>
-<div class="viewcode-block" id="SedimentDepositionTerm.residual"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_eq_2d.SedimentDepositionTerm.residual">[docs]</a>    <span class="k">def</span> <span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
+<div class="viewcode-block" id="SedimentDepositionTerm.residual">
+<a class="viewcode-back" href="../../thetis.html#thetis.sediment_eq_2d.SedimentDepositionTerm.residual">[docs]</a>
+    <span class="k">def</span> <span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
         <span class="n">depo</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">sediment_model</span><span class="o">.</span><span class="n">get_deposition_coefficient</span><span class="p">()</span>
         <span class="n">elev</span> <span class="o">=</span> <span class="n">fields</span><span class="p">[</span><span class="s1">&#39;elev_2d&#39;</span><span class="p">]</span>
         <span class="n">H</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">depth</span><span class="o">.</span><span class="n">get_total_depth</span><span class="p">(</span><span class="n">elev</span><span class="p">)</span>
         <span class="n">f</span> <span class="o">=</span> <span class="o">-</span><span class="bp">self</span><span class="o">.</span><span class="n">test</span> <span class="o">*</span> <span class="n">depo</span><span class="o">/</span><span class="n">H</span> <span class="o">*</span> <span class="n">solution</span> <span class="o">*</span> <span class="bp">self</span><span class="o">.</span><span class="n">dx</span>
-        <span class="k">return</span> <span class="n">f</span></div></div>
+        <span class="k">return</span> <span class="n">f</span></div>
+</div>
 
 
-<div class="viewcode-block" id="SedimentEquation2D"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_eq_2d.SedimentEquation2D">[docs]</a><span class="k">class</span> <span class="nc">SedimentEquation2D</span><span class="p">(</span><span class="n">Equation</span><span class="p">):</span>
+
+<div class="viewcode-block" id="SedimentEquation2D">
+<a class="viewcode-back" href="../../thetis.html#thetis.sediment_eq_2d.SedimentEquation2D">[docs]</a>
+<span class="k">class</span> <span class="nc">SedimentEquation2D</span><span class="p">(</span><span class="n">Equation</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    2D sediment advection-diffusion equation: :eq:`tracer_eq_2d` or :eq:`cons_tracer_eq_2d`</span>
 <span class="sd">    with sediment source and sink term</span>
@@ -178,6 +202,7 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">add_term</span><span class="p">(</span><span class="n">SedimentDiffusionTerm</span><span class="p">(</span><span class="o">*</span><span class="n">args</span><span class="p">),</span> <span class="s1">&#39;explicit&#39;</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">add_term</span><span class="p">(</span><span class="n">SedimentErosionTerm</span><span class="p">(</span><span class="o">*</span><span class="n">args</span><span class="p">),</span> <span class="s1">&#39;source&#39;</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">add_term</span><span class="p">(</span><span class="n">SedimentDepositionTerm</span><span class="p">(</span><span class="o">*</span><span class="n">args</span><span class="p">),</span> <span class="s1">&#39;implicit&#39;</span><span class="p">)</span></div>
+
 </pre></div>
 
             <div class="clearer"></div>
@@ -188,8 +213,8 @@
       <div class="clearer"></div>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2016-2023, Tuomas Kärnä et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.5.0.
+    &#169; Copyright 2016-2023, Tuomas Kärnä et al..
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 7.2.6.
     </div>
   </body>
 </html>
