--- a/_modules/thetis/sediment_model.html
+++ b/_modules/thetis/sediment_model.html
@@ -1,17 +1,15 @@
-
 <!DOCTYPE html>
 
-<html>
+<html lang="en" data-content_root="../../">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.sediment_model &#8212; Thetis 0+untagged.2009.gd7af522 documentation</title>
-    <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
-    <link rel="stylesheet" type="text/css" href="../../_static/thetis.css" />
-    <script data-url_root="../../" id="documentation_options" src="../../_static/documentation_options.js"></script>
-    <script src="../../_static/jquery.js"></script>
-    <script src="../../_static/underscore.js"></script>
-    <script src="../../_static/doctools.js"></script>
+    <title>thetis.sediment_model &#8212; Thetis 0+untagged.2009.gb75eefa documentation</title>
+    <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=fa44fd50" />
+    <link rel="stylesheet" type="text/css" href="../../_static/thetis.css?v=0f3339d6" />
+    <script src="../../_static/documentation_options.js?v=47a7fef3"></script>
+    <script src="../../_static/doctools.js?v=888ff710"></script>
+    <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
 <!--[if lte IE 6]>
@@ -55,7 +53,9 @@
 <span class="kn">from</span> <span class="nn">.log</span> <span class="kn">import</span> <span class="n">warning</span>
 
 
-<div class="viewcode-block" id="CorrectiveVelocityFactor"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_model.CorrectiveVelocityFactor">[docs]</a><span class="k">class</span> <span class="nc">CorrectiveVelocityFactor</span><span class="p">:</span>
+<div class="viewcode-block" id="CorrectiveVelocityFactor">
+<a class="viewcode-back" href="../../thetis.html#thetis.sediment_model.CorrectiveVelocityFactor">[docs]</a>
+<span class="k">class</span> <span class="nc">CorrectiveVelocityFactor</span><span class="p">:</span>
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">depth</span><span class="p">,</span> <span class="n">ksp</span><span class="p">,</span> <span class="n">settling_velocity</span><span class="p">,</span> <span class="n">ustar</span><span class="p">,</span> <span class="n">a</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Set up advective velocity factor `self.velocity_correction_factor`</span>
@@ -100,15 +100,21 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">velocity_correction_factor_expr</span> <span class="o">=</span> <span class="n">max_value</span><span class="p">(</span><span class="n">min_value</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">alpha</span><span class="p">,</span> <span class="n">Constant</span><span class="p">(</span><span class="mi">1</span><span class="p">)),</span> <span class="n">Constant</span><span class="p">(</span><span class="mf">0.</span><span class="p">))</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">update</span><span class="p">()</span>
 
-<div class="viewcode-block" id="CorrectiveVelocityFactor.update"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_model.CorrectiveVelocityFactor.update">[docs]</a>    <span class="k">def</span> <span class="nf">update</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+<div class="viewcode-block" id="CorrectiveVelocityFactor.update">
+<a class="viewcode-back" href="../../thetis.html#thetis.sediment_model.CorrectiveVelocityFactor.update">[docs]</a>
+    <span class="k">def</span> <span class="nf">update</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Update `self.velocity_correction_factor` using the updated values for velocity</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="c1"># final correction factor</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">velocity_correction_factor</span><span class="o">.</span><span class="n">interpolate</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">velocity_correction_factor_expr</span><span class="p">)</span></div></div>
+        <span class="bp">self</span><span class="o">.</span><span class="n">velocity_correction_factor</span><span class="o">.</span><span class="n">interpolate</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">velocity_correction_factor_expr</span><span class="p">)</span></div>
+</div>
 
 
-<div class="viewcode-block" id="SedimentModel"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_model.SedimentModel">[docs]</a><span class="k">class</span> <span class="nc">SedimentModel</span><span class="p">(</span><span class="nb">object</span><span class="p">):</span>
+
+<div class="viewcode-block" id="SedimentModel">
+<a class="viewcode-back" href="../../thetis.html#thetis.sediment_model.SedimentModel">[docs]</a>
+<span class="k">class</span> <span class="nc">SedimentModel</span><span class="p">(</span><span class="nb">object</span><span class="p">):</span>
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">options</span><span class="p">,</span> <span class="n">mesh2d</span><span class="p">,</span> <span class="n">uv</span><span class="p">,</span> <span class="n">elev</span><span class="p">,</span> <span class="n">depth</span><span class="p">):</span>
 
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
@@ -272,7 +278,9 @@
                 <span class="c1"># slope effect angle correction due to gravity</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">stress</span> <span class="o">=</span> <span class="n">Function</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">P1DG_2d</span><span class="p">)</span><span class="o">.</span><span class="n">interpolate</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">rhow</span><span class="o">*</span><span class="n">Constant</span><span class="p">(</span><span class="mf">0.5</span><span class="p">)</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">qfc</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">unorm</span><span class="p">)</span>
 
-<div class="viewcode-block" id="SedimentModel.get_bedload_term"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_model.SedimentModel.get_bedload_term">[docs]</a>    <span class="k">def</span> <span class="nf">get_bedload_term</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">bathymetry</span><span class="p">):</span>
+<div class="viewcode-block" id="SedimentModel.get_bedload_term">
+<a class="viewcode-back" href="../../thetis.html#thetis.sediment_model.SedimentModel.get_bedload_term">[docs]</a>
+    <span class="k">def</span> <span class="nf">get_bedload_term</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">bathymetry</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Returns expression for bedload transport :math:`(qbx, qby)` to be used in the Exner equation.</span>
 <span class="sd">        Note bathymetry is the function which is solved for in the exner equation.</span>
@@ -362,7 +370,10 @@
 
         <span class="k">return</span> <span class="n">qbx</span><span class="p">,</span> <span class="n">qby</span></div>
 
-<div class="viewcode-block" id="SedimentModel.get_sediment_slide_term"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_model.SedimentModel.get_sediment_slide_term">[docs]</a>    <span class="k">def</span> <span class="nf">get_sediment_slide_term</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">bathymetry</span><span class="p">):</span>
+
+<div class="viewcode-block" id="SedimentModel.get_sediment_slide_term">
+<a class="viewcode-back" href="../../thetis.html#thetis.sediment_model.SedimentModel.get_sediment_slide_term">[docs]</a>
+    <span class="k">def</span> <span class="nf">get_sediment_slide_term</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">bathymetry</span><span class="p">):</span>
         <span class="c1"># add component to bedload transport to ensure the slope angle does not exceed a certain value</span>
 
         <span class="c1"># maximum gradient allowed by sediment slide mechanism</span>
@@ -406,7 +417,10 @@
 
         <span class="k">return</span> <span class="n">diff_tensor</span></div>
 
-<div class="viewcode-block" id="SedimentModel.get_deposition_coefficient"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_model.SedimentModel.get_deposition_coefficient">[docs]</a>    <span class="k">def</span> <span class="nf">get_deposition_coefficient</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+
+<div class="viewcode-block" id="SedimentModel.get_deposition_coefficient">
+<a class="viewcode-back" href="../../thetis.html#thetis.sediment_model.SedimentModel.get_deposition_coefficient">[docs]</a>
+    <span class="k">def</span> <span class="nf">get_deposition_coefficient</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Returns coefficient :math:`C` such that :math:`C/H*sediment` is deposition term in sediment equation</span>
 
 <span class="sd">        If sediment field is depth-averaged, :math:`C*sediment` is (total) deposition (over the column)</span>
@@ -416,15 +430,24 @@
 <span class="sd">        as it appears in the Exner equation, and is the same in the sediment equation.&quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">_deposition</span></div>
 
-<div class="viewcode-block" id="SedimentModel.get_erosion_term"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_model.SedimentModel.get_erosion_term">[docs]</a>    <span class="k">def</span> <span class="nf">get_erosion_term</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+
+<div class="viewcode-block" id="SedimentModel.get_erosion_term">
+<a class="viewcode-back" href="../../thetis.html#thetis.sediment_model.SedimentModel.get_erosion_term">[docs]</a>
+    <span class="k">def</span> <span class="nf">get_erosion_term</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Returns expression for (depth-integrated) erosion.&quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">_erosion</span></div>
 
-<div class="viewcode-block" id="SedimentModel.get_equilibrium_tracer"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_model.SedimentModel.get_equilibrium_tracer">[docs]</a>    <span class="k">def</span> <span class="nf">get_equilibrium_tracer</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+
+<div class="viewcode-block" id="SedimentModel.get_equilibrium_tracer">
+<a class="viewcode-back" href="../../thetis.html#thetis.sediment_model.SedimentModel.get_equilibrium_tracer">[docs]</a>
+    <span class="k">def</span> <span class="nf">get_equilibrium_tracer</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Returns expression for (depth-averaged) equilibrium tracer.&quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">equilibrium_tracer</span></div>
 
-<div class="viewcode-block" id="SedimentModel.get_advective_velocity_correction_factor"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_model.SedimentModel.get_advective_velocity_correction_factor">[docs]</a>    <span class="k">def</span> <span class="nf">get_advective_velocity_correction_factor</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+
+<div class="viewcode-block" id="SedimentModel.get_advective_velocity_correction_factor">
+<a class="viewcode-back" href="../../thetis.html#thetis.sediment_model.SedimentModel.get_advective_velocity_correction_factor">[docs]</a>
+    <span class="k">def</span> <span class="nf">get_advective_velocity_correction_factor</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Returns correction factor for the advective velocity in the sediment equations</span>
 
 <span class="sd">        With :attr:`.SedimentModelOptions.use_advective_velocity_correction`, this applies a correction to</span>
@@ -437,7 +460,10 @@
         <span class="k">else</span><span class="p">:</span>
             <span class="k">return</span> <span class="mi">1</span></div>
 
-<div class="viewcode-block" id="SedimentModel.update"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_model.SedimentModel.update">[docs]</a>    <span class="k">def</span> <span class="nf">update</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+
+<div class="viewcode-block" id="SedimentModel.update">
+<a class="viewcode-back" href="../../thetis.html#thetis.sediment_model.SedimentModel.update">[docs]</a>
+    <span class="k">def</span> <span class="nf">update</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Update all functions used by :class:`.SedimentModel`</span>
 
 <span class="sd">        This repeats all projection and interpolations steps based on the current values</span>
@@ -467,7 +493,9 @@
                 <span class="bp">self</span><span class="o">.</span><span class="n">stress</span><span class="o">.</span><span class="n">interpolate</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">rhow</span><span class="o">*</span><span class="n">Constant</span><span class="p">(</span><span class="mf">0.5</span><span class="p">)</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">qfc</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">unorm</span><span class="p">)</span>
 
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">use_advective_velocity_correction</span><span class="p">:</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">correction_factor_model</span><span class="o">.</span><span class="n">update</span><span class="p">()</span></div></div>
+            <span class="bp">self</span><span class="o">.</span><span class="n">correction_factor_model</span><span class="o">.</span><span class="n">update</span><span class="p">()</span></div>
+</div>
+
 </pre></div>
 
             <div class="clearer"></div>
@@ -478,8 +506,8 @@
       <div class="clearer"></div>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2016-2023, Tuomas Kärnä et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.5.0.
+    &#169; Copyright 2016-2023, Tuomas Kärnä et al..
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 7.2.6.
     </div>
   </body>
 </html>
