--- a/_modules/thetis/timezone.html
+++ b/_modules/thetis/timezone.html
@@ -1,17 +1,15 @@
-
 <!DOCTYPE html>
 
-<html>
+<html lang="en" data-content_root="../../">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.timezone &#8212; Thetis 0+untagged.2009.gd7af522 documentation</title>
-    <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
-    <link rel="stylesheet" type="text/css" href="../../_static/thetis.css" />
-    <script data-url_root="../../" id="documentation_options" src="../../_static/documentation_options.js"></script>
-    <script src="../../_static/jquery.js"></script>
-    <script src="../../_static/underscore.js"></script>
-    <script src="../../_static/doctools.js"></script>
+    <title>thetis.timezone &#8212; Thetis 0+untagged.2009.gb75eefa documentation</title>
+    <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=fa44fd50" />
+    <link rel="stylesheet" type="text/css" href="../../_static/thetis.css?v=0f3339d6" />
+    <script src="../../_static/documentation_options.js?v=47a7fef3"></script>
+    <script src="../../_static/doctools.js?v=888ff710"></script>
+    <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
 <!--[if lte IE 6]>
@@ -60,7 +58,9 @@
 <span class="n">epoch</span> <span class="o">=</span> <span class="n">datetime</span><span class="o">.</span><span class="n">datetime</span><span class="p">(</span><span class="mi">1970</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="n">tzinfo</span><span class="o">=</span><span class="n">pytz</span><span class="o">.</span><span class="n">utc</span><span class="p">)</span>
 
 
-<div class="viewcode-block" id="FixedTimeZone"><a class="viewcode-back" href="../../thetis.html#thetis.timezone.FixedTimeZone">[docs]</a><span class="k">class</span> <span class="nc">FixedTimeZone</span><span class="p">(</span><span class="n">pytz</span><span class="o">.</span><span class="n">_FixedOffset</span><span class="p">):</span>
+<div class="viewcode-block" id="FixedTimeZone">
+<a class="viewcode-back" href="../../thetis.html#thetis.timezone.FixedTimeZone">[docs]</a>
+<span class="k">class</span> <span class="nc">FixedTimeZone</span><span class="p">(</span><span class="n">pytz</span><span class="o">.</span><span class="n">_FixedOffset</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Class that represents a fixed time zone defined by UTC offset in hours.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
@@ -74,25 +74,35 @@
         <span class="nb">super</span><span class="p">(</span><span class="n">FixedTimeZone</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="n">offset_minutes</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">zone</span> <span class="o">=</span> <span class="n">name</span>
 
-<div class="viewcode-block" id="FixedTimeZone.tzname"><a class="viewcode-back" href="../../thetis.html#thetis.timezone.FixedTimeZone.tzname">[docs]</a>    <span class="k">def</span> <span class="nf">tzname</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">dt</span><span class="p">):</span>
+<div class="viewcode-block" id="FixedTimeZone.tzname">
+<a class="viewcode-back" href="../../thetis.html#thetis.timezone.FixedTimeZone.tzname">[docs]</a>
+    <span class="k">def</span> <span class="nf">tzname</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">dt</span><span class="p">):</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">zone</span></div>
+
 
     <span class="k">def</span> <span class="fm">__repr__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">return</span> <span class="s1">&#39;FixedTimeZone(</span><span class="si">{:}</span><span class="s1">, </span><span class="si">{:}</span><span class="s1">)&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_offset_hours</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">zone</span><span class="p">)</span></div>
 
 
-<div class="viewcode-block" id="datetime_to_epoch"><a class="viewcode-back" href="../../thetis.html#thetis.timezone.datetime_to_epoch">[docs]</a><span class="k">def</span> <span class="nf">datetime_to_epoch</span><span class="p">(</span><span class="n">t</span><span class="p">):</span>
+
+<div class="viewcode-block" id="datetime_to_epoch">
+<a class="viewcode-back" href="../../thetis.html#thetis.timezone.datetime_to_epoch">[docs]</a>
+<span class="k">def</span> <span class="nf">datetime_to_epoch</span><span class="p">(</span><span class="n">t</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Convert python datetime object to epoch time stamp.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="p">(</span><span class="n">t</span> <span class="o">-</span> <span class="n">epoch</span><span class="p">)</span><span class="o">.</span><span class="n">total_seconds</span><span class="p">()</span></div>
 
 
-<div class="viewcode-block" id="epoch_to_datetime"><a class="viewcode-back" href="../../thetis.html#thetis.timezone.epoch_to_datetime">[docs]</a><span class="k">def</span> <span class="nf">epoch_to_datetime</span><span class="p">(</span><span class="n">t</span><span class="p">):</span>
+
+<div class="viewcode-block" id="epoch_to_datetime">
+<a class="viewcode-back" href="../../thetis.html#thetis.timezone.epoch_to_datetime">[docs]</a>
+<span class="k">def</span> <span class="nf">epoch_to_datetime</span><span class="p">(</span><span class="n">t</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Convert python datetime object to epoch time stamp.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="n">epoch</span> <span class="o">+</span> <span class="n">datetime</span><span class="o">.</span><span class="n">timedelta</span><span class="p">(</span><span class="n">seconds</span><span class="o">=</span><span class="n">t</span><span class="p">)</span></div>
+
 </pre></div>
 
             <div class="clearer"></div>
@@ -103,8 +113,8 @@
       <div class="clearer"></div>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2016-2023, Tuomas Kärnä et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.5.0.
+    &#169; Copyright 2016-2023, Tuomas Kärnä et al..
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 7.2.6.
     </div>
   </body>
 </html>
